pkp/pkp-lib#7592 Remove unused email templates and update localizations

--- a/locale/ca_ES/emails.po
+++ b/locale/ca_ES/emails.po
@@ -16,11 +16,11 @@ msgstr ""
 "X-Generator: Weblate 3.9.1\n"
 
 msgid "emails.notification.subject"
-msgstr "Notificació nova de {$siteTitle}"
+msgstr "Notificació nova de {$contextName}"
 
 msgid "emails.notification.body"
 msgstr ""
-"Teniu una notificació nova de {$siteTitle}:<br />\n"
+"Teniu una notificació nova de {$contextName}:<br />\n"
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
@@ -185,67 +185,7 @@ msgstr ""
 "tramesa. El correu dona informació sobre la tramesa, com el títol i el "
 "resum, la data límit per fer la revisió i com accedir-hi. Aquest missatge "
 "s'utilitza quan s'ha seleccionat el procés de revisió estàndard a Gestió > "
-"Configuració > Flux de treball > Revisió. (Si no consulteu "
-"REVIEW_REQUEST_ATTACHED.)"
-
-msgid "emails.reviewRequestOneclick.subject"
-msgstr "Sol·licitud de revisió d'un manuscrit"
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Crec que seríeu un revisor/a excel·lent per al manuscrit «{$submissionTitle},» que acaba de ser tramès a {$contextName}. La tramesa del resum s'ha d'inserir a sota i espero que considereu dur a terme aquesta tasca tan important per a nosaltres.<br />\n"
-"<br />\n"
-"Accediu al lloc web de la publicació a través de {$responseDueDate} per indicar si accepteu o no de dur a terme la revisió, així com per accedir a la tramesa i enregistrar la vostra revisió i recomanació.<br />\n"
-"<br />\n"
-"La revisió s'ha de lliurar el {$reviewDueDate}.<br />\n"
-"<br />\n"
-"URL de tramesa: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Gràcies per considerar aquesta sol·licitud.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot;<br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled}<br />\n"
-"{$submissionAbstract}"
-
-msgid "emails.reviewRequestOneclick.description"
-msgstr "Aquest correu de l'editor/a de sèrie al revisor/a sol·licita que el revisor/a accepti o rebutgi la tasca de revisar una tramesa. Proporciona informació de la tramesa com ara el títol i el resum, la data de lliurament de la revisió i com accedir a la tramesa. Aquest missatge s'utilitza quan se selecciona el procés de revisió estàndard a Administrar > Configuració > Revisar, i en un clic l'accés s'habilita l'accés al revisor/a."
-
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Sol·licitud de revisió d'un manuscrit"
-
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Crec que seríeu un revisor/a excel·lent per al manuscrit, «{$submissionTitle},» i espero que considereu realitzar aquesta tasca tan important per a nosaltres. Les directrius de revisió d'aquesta publicació apareixen a continuació i la tramesa la trobareu adjunta a aquest correu electrònic. La vostra revisió de la tramesa, juntament amb les vostres recomanacions, me les haureu d'enviar el {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Indiqueu en un correu electrònic abans del {$responseDueDate} si esteu disponible i accepteu de fer la revisió.<br />\n"
-"<br />\n"
-"Gràcies per considerar aquesta sol·licitud.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"Directrius de revisió<br />\n"
-"<br />\n"
-"{$reviewGuidelines}<br />\n"
-""
-
-msgid "emails.reviewRequestAttached.description"
-msgstr ""
-"Aquest missatge de correu electrònic de l'editor de la sèrie s'adreça a un "
-"revisor/a per sol·licitar-li que accepti o rebutgi la tasca de revisió d'una "
-"tramesa. El correu inclou la tramesa com a adjunt. Aquest missatge "
-"s'utilitza quan s'ha seleccionat el procés de revisió d'adjunt de correu a "
-"Gestió > Configuració > Flux de treball > Revisió. (Si no consulteu "
-"REVIEW_REQUEST.)"
+"Configuració > Flux de treball > Revisió."
 
 msgid "emails.reviewCancel.subject"
 msgstr "Sol·licitud de revisió cancel·lada"
@@ -331,24 +271,6 @@ msgstr ""
 "{$signature}"
 
 msgid "emails.reviewRemind.description"
-msgstr "Aquest correu l'envia l'editor/a de sèrie per recordar al revisor/a que ha d'entregar la revisió."
-
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Recordatori de revisió de tramesa"
-
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Aquest missatge és només un recordatori de la nostra sol·licitud de revisió de la tramesa «{$submissionTitle},» per {$contextName}. Teníem previst tenir aquesta revisió pel {$reviewDueDate} i ens agradaria rebre-la tan aviat com la tingueu enllestida.<br />\n"
-"<br />\n"
-"URL de tramesa: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Confirmeu que esteu disponible per completar aquesta contribució de vital importància per a la publicació. Espero rebre notícies vostres.<br />\n"
-"<br />\n"
-"{$signature}"
-
-msgid "emails.reviewRemindOneclick.description"
 msgstr "Aquest correu l'envia l'editor/a de sèrie per recordar al revisor/a que ha d'entregar la revisió."
 
 msgid "emails.reviewRemindAuto.subject"
