--- a/locale/cs_CZ/emails.po
+++ b/locale/cs_CZ/emails.po
@@ -12,7 +12,7 @@ msgstr ""
 "X-Generator: Weblate 3.9.1\n"
 
 msgid "emails.notification.subject"
-msgstr "Nové oznámení od {$siteTitle}"
+msgstr "Nové oznámení od {$contextName}"
 
 msgid "emails.passwordReset.description"
 msgstr ""
@@ -64,7 +64,7 @@ msgstr ""
 #, fuzzy
 msgid "emails.notification.body"
 msgstr ""
-"Obdržel jste nové oznámení od {$siteTitle}:<br />\n"
+"Obdržel jste nové oznámení od {$contextName}:<br />\n"
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
@@ -105,30 +105,6 @@ msgstr ""
 
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Automatické připomenutí recenze podání"
-
-msgid "emails.reviewRemindOneclick.description"
-msgstr ""
-"Tento e-mail zasílá editor řady, aby recenzentovi připomněl, že má být jeho "
-"recenze odeslána."
-
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Jen jemné připomenutí naší žádosti o recenzi podání, "
-"&quot;{$submissionTitle},&quot; pro {$contextName}. Doufali jsme, že tuto "
-"recenzi obdržíme do {$reviewDueDate}, a byli bychom rádi, kdybyste jej "
-"obdrželi, jakmile budete schopni ji připravit.<br />\n"
-"<br />\n"
-"Adresa URL pro zasílání příspěvků: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Potvrďte, prosím, svou schopnost dokončit tento zásadní příspěvek k práci "
-"tisku. Těším se na Vaši odpověď.<br />\n"
-"<br />\n"
-"{$signature}"
-
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Připomenutí recenze podání"
 
 msgid "emails.reviewRemind.description"
 msgstr ""
@@ -235,40 +211,6 @@ msgstr ""
 msgid "emails.reviewCancel.subject"
 msgstr "Žádost o recenzi zrušena"
 
-msgid "emails.reviewRequestAttached.description"
-msgstr ""
-"Tento e-mail zasílá editor serie recenzentovi s žádostí o přijetí nebo "
-"odmítnutí úkolu posoudit předložený příspěvek. Obsahuje podání jako přílohu. "
-"Tato zpráva se používá, když je v nabídce Správa > Nastavení > Pracovní "
-"postup > Přezkoumání vybrána možnost Proces přezkoumání e-mailem s přílohou. "
-"(Jinak viz REVIEW_REQUEST.)"
-
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Věřím, že byste byl vynikajícím recenzentem rukopisu, "
-"&quot;{$submissionTitle},&quot; a žádám Vás, abyste zvážil, zda se tohoto "
-"důležitého úkolu pro nás ujmete. Níže jsou přiloženy pokyny pro recenzování "
-"tohoto tisku a k tomuto e-mailu je přiložena předkládaná práce. Vaše "
-"posouzení podání spolu s doporučením mi zašlete e-mailem do "
-"{$reviewDueDate}.<br />\n"
-"<br />\n"
-"Do {$responseDueDate} prosím ve zpětném e-mailu uveďte, zda jste schopni a "
-"ochotni recenzi provést.<br />\n"
-"<br />\n"
-"Děkuji za zvážení této žádosti.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"Pokyny pro přezkoumání<br />\n"
-"<br />\n"
-"{$reviewGuidelines}<br />\n"
-
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Žádost o recenzi rukopisu"
-
 msgid "emails.reviewResponseOverdueAutoOneclick.description"
 msgstr ""
 "Tento e-mail se automaticky odešle, jakmile uplyne termín potvrzení "
@@ -346,46 +288,6 @@ msgstr ""
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Žádost o recenzi rukopisu"
 
-msgid "emails.reviewRequestOneclick.description"
-msgstr ""
-"Tento e-mail od editora serie po recenzentovi žádá, aby recenzent přijal "
-"nebo odmítl úkol posoudit předloženou práci. Poskytuje informace o podání, "
-"jako je název a abstrakt, datum uzávěrky recenze a způsob přístupu k "
-"samotnému podání. Tato zpráva se používá, pokud je v nabídce Správa > "
-"Nastavení > Pracovní postupy > Recenzování vybrán standardní proces "
-"recenzování a je povolen přístup recenzenta jedním kliknutím."
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Domnívám se, že byste byl/a vynikajícím recenzentem rukopisu, "
-"&quot;{$submissionTitle},&quot; který byl zaslán do {$contextName}. Abstrakt "
-"příspěvku je vložen níže a doufám, že zvážíte, zda se tohoto důležitého "
-"úkolu pro nás ujmete.<br />\n"
-"<br />\n"
-"Prosím, přihlaste se na webové stránky tisku do {$responseDueDate}, abyste "
-"uvedli, zda se ujmete recenze, či nikoli, a také abyste měli přístup k "
-"podání a mohli zaznamenat svůj posudek a doporučení.<br />\n"
-"<br />\n"
-"Samotný posudek je třeba předložit do {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Adresa URL podání: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Děkujeme za zvážení této žádosti.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot;<br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled}<br />\n"
-"{$submissionAbstract}"
-
-msgid "emails.reviewRequestOneclick.subject"
-msgstr "Žádost o recenzi rukopisu"
-
 msgid "emails.reviewRequest.description"
 msgstr ""
 "Tento e-mail od editora serie pro recenzenta požaduje, aby recenzent přijal "
@@ -393,7 +295,7 @@ msgstr ""
 "jako je název a abstrakt, datum odevzdání recenze a způsob přístupu k "
 "samotnému podání. Tato zpráva se používá, pokud je v nabídce Správa > "
 "Nastavení > Pracovní postupy > Přezkoumání vybrán standardní proces "
-"přezkoumání. (Jinak viz REVIEW_REQUEST_ATTACHED.)"
+"přezkoumání."
 
 msgid "emails.reviewRequest.body"
 msgstr ""
