--- a/locale/da_DK/emails.po
+++ b/locale/da_DK/emails.po
@@ -190,11 +190,11 @@ msgstr ""
 "adgang til det."
 
 msgid "emails.notification.subject"
-msgstr "Ny meddelelse fra {$siteTitle}"
+msgstr "Ny meddelelse fra {$contextName}"
 
 msgid "emails.notification.body"
 msgstr ""
-"Du har modtaget en ny meddelelse fra {$siteTitle}:<br />\n"
+"Du har modtaget en ny meddelelse fra {$contextName}:<br />\n"
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
@@ -387,24 +387,6 @@ msgstr ""
 msgid "emails.reviewRemindAutoOneclick.description"
 msgstr "Denne e-mail sendes automatisk, når en bedømmers forfaldsdato overskrides (se Bedømmelsesindstillinger under Indstillinger > Workflow > Bedømmelse), og når adgang for bedømmere ved hjælp af ét klik er aktiveret. Planlagte opgaver skal aktiveres og konfigureres (se webstedets konfigurationsfil)."
 
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Påmindelse om bedømmelse af manuskript"
-
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Dette er blot for at minde dig om vores forespørgsel om din bedømmelse af manuskriptet &quot;{$submissionTitle}&quot; til {$contextName}. Vi havde håbet på at modtage bedømmelsen senest den {$reviewDueDate} og ser frem til at modtage den, så snart du er færdig med den.<br />\n"
-"<br />\n"
-"Manuskriptets URL-adresse: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Vi beder dig bekræfte, at du er i stand til at fuldføre dette vigtige bidrag til tidsskriftets arbejde. Jeg ser frem til at høre fra dig.<br />\n"
-"<br />\n"
-"{$signature}"
-
-msgid "emails.reviewRemindOneclick.description"
-msgstr "Denne e-mail sendes af serieredaktøren til en bedømmer for at minde vedkommende om, at bedømmelsen skulle have været afleveret."
-
 msgid "emails.reviewRequest.subject"
 msgstr "Forespørgsel om bedømmelse af manuskript"
 
@@ -437,65 +419,7 @@ msgstr ""
 "information om manuskriptet, såsom titel og resumé, forfaldsdato for "
 "bedømmelse, og hvordan man får adgang til selve manuskriptet. Denne "
 "meddelelse bruges, når standardbedømmelsesprocessen er valgt i Indstillinger>"
-" Workflow> Bedømmelse. (Se ellers REVIEW_REQUEST_ATTACHED.)"
-
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Forespørgsel om bedømmelse af manuskript"
-
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Jeg tror, at du vil kunne være en fremragende bedømmer af manuskriptet "
-"&quot;{$submissionTitle}&quot;, og jeg beder dig om at overveje at påtage "
-"dig denne vigtige opgave for os. Dette forlags Retningslinjer for "
-"bedømmelser er tilføjet nedenfor, og manuskriptet er vedhæftet denne e-mail. "
-"Din bedømmelse af manuskriptet samt din anbefaling skal sendes til mig pr. e-"
-"mail senest den {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Meld venligst tilbage via e-mail inden den {$responseDueDate} , om du kan og "
-"er villig til at foretage bedømmelsen.<br />\n"
-"<br />\n"
-"Tak for din overvejelse af denne forespørgsel.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"Retningslinjer for bedømmelser<br />\n"
-"<br />\n"
-"{$reviewGuidelines}<br />\n"
-
-msgid "emails.reviewRequestAttached.description"
-msgstr "Denne e-mail sendes af serieredaktøren til en bedømmer og beder vedkommende om at acceptere eller afvise at bedømme et manuskript. Manuskriptet er vedhæftet denne e-mail. Denne meddelelse benyttes, hvis indstillingen for bedømmelsesproces, hvor manuskript er vedhæftet e-mail, er valgt"
-
-msgid "emails.reviewRequestOneclick.subject"
-msgstr "Forespørgsel om bedømmelse af manuskript"
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Jeg tror, at du vil være en fremragende bedømmer af manuskriptet &quot;{$submissionTitle}&quot;, der er blevet sendt til {$contextName}. Nedenfor finder du et resumé af manuskriptet, og jeg håber, at du vil overveje at påtage dig denne vigtige opgave for os.<br />\n"
-"<br />\n"
-"Log på tidsskriftets websted inden den {$responseDueDate} for at angive, om du vil påtage dig bedømmelsen eller ej, samt for at få adgang til manuskriptet og registrere din bedømmelse og anbefaling.<br />\n"
-"<br />\n"
-"Selve bedømmelsen skal afleveres senest den {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Manuskriptets URL-adresse: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Tak for din overvejelse af denne forespørgsel.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot;<br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled}<br />\n"
-"{$submissionAbstract}"
-
-msgid "emails.reviewRequestOneclick.description"
-msgstr "Denne e-mail fra serieredaktøren til en bedømmer anmoder bedømmeren om at acceptere eller afvise at bedømme et manuskript. Den indeholder oplysninger om manuskriptet, f.eks. titel og resumé, forfaldsdato for bedømmelse, samt hvordan der kan oprettes adgang til selve manuskriptet. Denne meddelelse benyttes, hvis indstillingen standardbedømmelsesproces er valgt under Indstillinger > Workflow > Bedømmelse og adgang for bedømmere ved hjælp af ét klik er aktiveret."
+" Workflow> Bedømmelse."
 
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Forespørgsel om bedømmelse af manuskript"
