--- a/locale/el_GR/emails.po
+++ b/locale/el_GR/emails.po
@@ -12,12 +12,12 @@ msgstr ""
 "Language: \n"
 
 msgid "emails.notification.subject"
-msgstr "Νέα ειδοποίηση από {$siteTitle}"
+msgstr "Νέα ειδοποίηση από {$contextName}"
 
 #, fuzzy
 msgid "emails.notification.body"
 msgstr ""
-"Έχετε μια νέα ειδοποίηση από {$siteTitle}:<br />\n"
+"Έχετε μια νέα ειδοποίηση από {$contextName}:<br />\n"
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
@@ -172,59 +172,7 @@ msgstr ""
 "{$signature}"
 
 msgid "emails.reviewRequest.description"
-msgstr "Το συγκεκριμένο μήνυμα στέλνεται από τον Επιμελητή Σειράς προς τον Αξιολογητή  και του αιτείται να δεχτεί ή να απορρίψει την αξιολόγηση μιας υποβολής. Παρέχει πληροφορίες σχετικά με την υποβολή όπως ο τίτλος και το απόσπασμα, την ημερομηνία προθεσμίας της υποβολής και τον τρόπο πρόσβασης στην υποβολή. Το συγκεκριμένο μήνυμα χρησιμοποιείται όταν η Πρότυπη διαδικασία αξιολόγησης (online) έχει επιλεχθεί στο μενού Οργάνωση των εκδόσεων, Βήμα 2. (Σε διαφορετική περίπτωση ανατρέξτε στο REVIEW_REQUEST_ATTACHED.)"
-
-msgid "emails.reviewRequestOneclick.subject"
-msgstr "Αίτημα αξιολόγησης εργασίας"
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Πιστεύουμε ότι θα μπορούσατε να συνεισφέρετε στην έκδοση του e-book μας ως ένας εξαίρετος αξιολογητής για την εργασία, &quot;{$submissionTitle},&quot; που έχει υποβληθεί στις εκδόσεις {$contextName}. Η περίληψη της υποβολής παρατίθεται παρακάτω, και ελπίζουμε ότι θα δεχθείτε να αναλάβετε αυτή την σημαντική εργασία για εμάς.<br />\n"
-"<br />\n"
-"Σε κάθε περίπτωση θα σας παρακαλούσαμε να συνδεθείτε στον δικτυακό τόπο των εκδόσεων μέχρι την {$responseDueDate} για να μας γνωστοποιήσετε εάν θα αναλάβετε την συγκεκριμένη αξιολόγηση ή όχι, και σε περίπτωση θετικής απάντησης να αποκτήσετε πρόσβαση στο πλήρες κείμενο της υποβολής και να καταχωρίσετε την αξιολόγησή σας και τις συστάσεις σας.<br />\n"
-"<br />\n"
-"Η αξιολόγηση λήγει στις {$reviewDueDate}.<br />\n"
-"<br />\n"
-"URL υποβολής: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Σας ευχαριστούμε εκ των προτέρων για την εξέταση του αιτήματός μας.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot;<br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled}<br />\n"
-"{$monographAbstract}"
-
-msgid "emails.reviewRequestOneclick.description"
-msgstr "Το συγκεκριμένο μήνυμα στέλνεται από τον Επιμελητή Σειράς προς τον αξιολογητή και του αιτείται να δεχτεί ή να απορρίψει την αξιολόγηση μιας υποβολής. Παρέχει πληροφορίες σχετικά με την υποβολή όπως ο τίτλος και το απόσπασμα, την ημερομηνία προθεσμίας της υποβολής και τον τρόπο πρόσβασης στην υποβολή. Το συγκεκριμένο μήνυμα χρησιμοποιείται όταν η Πρότυπη διαδικασία αξιολόγησης (online) έχει επιλεχθεί στο μενού Οργάνωση των εκδόσεων, Βήμα 2, και έτσι ενεργοποιείται η πρόσβαση του αξιολογητή με ένα μόνο κλικ."
-
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Αίτημα αξιολόγησης εργασίας"
-
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Πιστεύουμε ότι θα μπορούσατε να συνεισφέρετε στην έκδοση του e-book μας ως ένας εξαίρετος αξιολογητής για την εργασία, &quot;{$submissionTitle},&quot; Η περίληψη της υποβολής παρατίθεται παρακάτω, και ελπίζουμε ότι θα δεχθείτε να αναλάβετε αυτή την σημαντική εργασία για εμάς.  Οι Κατευθυντήριες γραμμές αξιολόγησης για τη συγκεκριμένη έκδοση αναφέρονται παρακάτω ενώ η υποβολή έχει επισυναφθεί στο παρόν μήνυμα. Η αξιολόγησή σας καθώς και οι συστάσεις-εισηγήσεις σας για την υποβολή θα πρέπει να αποσταλούν με email σε εμάς μέχρι την {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Θα σας παρακαλούσαμε να μας ενημερώσετε με email μέχρι την {$responseDueDate} εάν είστε διαθέσιμοι και πρόθυμοι να αναλάβετε την συγκεκριμένη αξιολόγηση.<br />\n"
-"<br />\n"
-"Σας ευχαριστούμε εκ των προτέρων για την εξέταση του αιτήματός μας.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"Κατευθυντήριες γραμμές αξιολόγησης<br />\n"
-"<br />\n"
-"{$reviewGuidelines}"
-
-msgid "emails.reviewRequestAttached.description"
-msgstr "Το συγκεκριμένο μήνυμα στέλνεται από τον Επιμελητή Σειράς προς τον αξιολογητή και του ζητείται να δεχτεί ή να απορρίψει την αξιολόγηση της υποβολής. Περιλαμβάνει την υποβολή ως επισυναπτόμενο αρχείο. Το συγκεκριμένο μήνυμα χρησιμοποιείται όταν έχει επιλεγεί η Διαδικασία αξιολόγησης μέσω email, από το μενού Οργάνωση των εκδόσεων, Βήμα 2. (Σε διαφορετική περίπτωση ανατρέξτε στο REVIEW_REQUEST.)"
+msgstr "Το συγκεκριμένο μήνυμα στέλνεται από τον Επιμελητή Σειράς προς τον Αξιολογητή  και του αιτείται να δεχτεί ή να απορρίψει την αξιολόγηση μιας υποβολής. Παρέχει πληροφορίες σχετικά με την υποβολή όπως ο τίτλος και το απόσπασμα, την ημερομηνία προθεσμίας της υποβολής και τον τρόπο πρόσβασης στην υποβολή. Το συγκεκριμένο μήνυμα χρησιμοποιείται όταν η Πρότυπη διαδικασία αξιολόγησης (online) έχει επιλεχθεί στο μενού Οργάνωση των εκδόσεων, Βήμα 2."
 
 msgid "emails.reviewCancel.subject"
 msgstr "Αίτημα για ακύρωση αξιολόγησης"
@@ -289,24 +237,6 @@ msgstr ""
 
 msgid "emails.reviewRemind.description"
 msgstr "Το συγκεκριμένο μήνυμα ηλεκτρονικού ταχυδρομείου αποστέλλεται από τον Επιμελητή Σειράς ως υπενθύμιση στον Αξιολογητή για την ολοκλήρωση της αξιολόγησης."
-
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Υπενθύμιση αξιολόγησης υποβολής"
-
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Το μήνυμα αυτό αποτελεί μια απλή υπενθύμιση σχετικά με την αξιολόγηση της υποβολής, &quot;{$submissionTitle},&quot; για τις εκδόσεις {$contextName} που έχετε αναλάβει. Ελπίζουμε ότι η αξιολόγηση να είναι έτοιμη μέχρι την σχετική προθεσμία {$reviewDueDate}, και θα είμαστε ευγνώμονες να τη λάβουμε το συντομότερο δυνατό.<br />\n"
-"<br />\n"
-"URL υποβολής: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Θα σας παρακαλούσαμε να μας επιβεβαιώσετε ότι είστε σε θέση να ολοκληρώσετε επιτυχώς την, τόσο σημαντική για την έκδοση μας, εργασία της αξιολόγησης . Ελπίζουμε να λάβουμε σύντομα την απάντησή σας.<br />\n"
-"<br />\n"
-"{$signature}"
-
-msgid "emails.reviewRemindOneclick.description"
-msgstr "Το συγκεκριμένο μήνυμα ηλεκτρονικού ταχυδρομείου αποστέλλεται από τον Επιμελητή Σειράς ως υπενθύμιση στον Αξιολογητή για την πραγματοποίηση της αξιολόγησης."
 
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Αυτοματοποιημένη υπενθύμιση αξιολόγησης υποβολής"
