--- a/locale/en_US/emails.po
+++ b/locale/en_US/emails.po
@@ -12,11 +12,11 @@ msgstr ""
 "Language: \n"
 
 msgid "emails.notification.subject"
-msgstr "New notification from {$siteTitle}"
+msgstr "New notification from {$contextName}"
 
 msgid "emails.notification.body"
 msgstr ""
-"You have a new notification from {$siteTitle}:<br />\n"
+"You have a new notification from {$contextName}:<br />\n"
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
@@ -189,36 +189,7 @@ msgstr ""
 ""
 
 msgid "emails.reviewRequest.description"
-msgstr "This email from the Series Editor to a Reviewer requests that the reviewer accept or decline the task of reviewing a submission. It provides information about the submission such as the title and abstract, a review due date, and how to access the submission itself. This message is used when the Standard Review Process is selected in Management > Settings > Workflow > Review. (Otherwise see REVIEW_REQUEST_ATTACHED.)"
-
-msgid "emails.reviewRequestOneclick.subject"
-msgstr "Manuscript Review Request"
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"I believe that you would serve as an excellent reviewer of the manuscript, &quot;{$submissionTitle},&quot; which has been submitted to {$contextName}. The submission's abstract is inserted below, and I hope that you will consider undertaking this important task for us.<br />\n"
-"<br />\n"
-"Please log into the press web site by {$responseDueDate} to indicate whether you will undertake the review or not, as well as to access the submission and to record your review and recommendation.<br />\n"
-"<br />\n"
-"The review itself is due {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Submission URL: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Thank you for considering this request.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot;<br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled}<br />\n"
-"{$submissionAbstract}"
-
-msgid "emails.reviewRequestOneclick.description"
-msgstr "This email from the Series Editor to a Reviewer requests that the reviewer accept or decline the task of reviewing a submission. It provides information about the submission such as the title and abstract, a review due date, and how to access the submission itself. This message is used when the Standard Review Process is selected in Management > Settings > Workflow > Review, and one-click reviewer access is enabled."
+msgstr "This email from the Series Editor to a Reviewer requests that the reviewer accept or decline the task of reviewing a submission. It provides information about the submission such as the title and abstract, a review due date, and how to access the submission itself. This message is used when the Standard Review Process is selected in Management > Settings > Workflow > Review."
 
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Manuscript Review Request"
@@ -277,30 +248,6 @@ msgstr ""
 
 msgid "emails.reviewResponseOverdueAutoOneclick.description"
 msgstr "This email is automatically sent when a reviewer's confirmation due date elapses (see Review Options under Settings > Workflow > Review) and one-click reviewer access is enabled. Scheduled tasks must be enabled and configured (see the site configuration file)."
-
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Manuscript Review Request"
-
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"I believe that you would serve as an excellent reviewer of the manuscript, &quot;{$submissionTitle},&quot; and I am asking that you consider undertaking this important task for us. The Review Guidelines for this press are appended below, and the submission is attached to this email. Your review of the submission, along with your recommendation, should be emailed to me by {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Please indicate in a return email by {$responseDueDate} whether you are able and willing to do the review.<br />\n"
-"<br />\n"
-"Thank you for considering this request.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"Review Guidelines<br />\n"
-"<br />\n"
-"{$reviewGuidelines}<br />\n"
-""
-
-msgid "emails.reviewRequestAttached.description"
-msgstr "This email is sent by the Series Editor to a Reviewer to request that they accept or decline the task of reviewing a submission. It includes the submission as an attachment. This message is used when the Email-Attachment Review Process is selected in Management > Settings > Workflow > Review. (Otherwise see REVIEW_REQUEST.)"
 
 msgid "emails.reviewCancel.subject"
 msgstr "Request for Review Cancelled"
@@ -378,24 +325,6 @@ msgstr ""
 "{$signature}"
 
 msgid "emails.reviewRemind.description"
-msgstr "This email is sent by a Series Editor to remind a reviewer that their review is due."
-
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Submission Review Reminder"
-
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Just a gentle reminder of our request for your review of the submission, &quot;{$submissionTitle},&quot; for {$contextName}. We were hoping to have this review by {$reviewDueDate}, and would be pleased to receive it as soon as you are able to prepare it.<br />\n"
-"<br />\n"
-"Submission URL: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Please confirm your ability to complete this vital contribution to the work of the press. I look forward to hearing from you.<br />\n"
-"<br />\n"
-"{$signature}"
-
-msgid "emails.reviewRemindOneclick.description"
 msgstr "This email is sent by a Series Editor to remind a reviewer that their review is due."
 
 msgid "emails.reviewRemindAuto.subject"
