--- a/locale/es_ES/emails.po
+++ b/locale/es_ES/emails.po
@@ -16,11 +16,11 @@ msgstr ""
 "X-Generator: Weblate 3.9.1\n"
 
 msgid "emails.notification.subject"
-msgstr "Nueva notificación de {$siteTitle}"
+msgstr "Nueva notificación de {$contextName}"
 
 msgid "emails.notification.body"
 msgstr ""
-"Tiene una notificación nueva de {$siteTitle}:<br />\n"
+"Tiene una notificación nueva de {$contextName}:<br />\n"
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
@@ -181,67 +181,7 @@ msgstr ""
 "Proporciona información sobre el envío, como el título y el resumen, una "
 "fecha límite de revisión y cómo acceder al propio envío. Este mensaje se "
 "utiliza cuando se selecciona el proceso de revisión estándar en Gestión > "
-"Ajustes > Flujo de trabajo > Revisión. (Si no consulte "
-"REVIEW_REQUEST_ATTACHED.)"
-
-msgid "emails.reviewRequestOneclick.subject"
-msgstr "Solicitud de revisión de manuscrito"
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Creo que puede ser un excelente revisor/a para el manuscrito &quot;{$submissionTitle}&quot; que se envió a {$contextName}. El resumen del envío se incluye debajo. Espero que considere llevar a cabo esta importante tarea para nosotros.<br />\n"
-"<br />\n"
-"Inicie sesión en la página web de la publicación antes del {$responseDueDate} para indicar si podrá o no realizar la revisión, así como para acceder al envío y registrar su revisión y recomendación.<br />\n"
-"<br />\n"
-"La revisión debe estar preparada antes del {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Dirección URL del envío: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Gracias por considerar esta solicitud.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot;<br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled}<br />\n"
-"{$submissionAbstract}"
-
-msgid "emails.reviewRequestOneclick.description"
-msgstr "El editor/a de la serie envía este correo electrónico al revisor/a para solicitar a este último que acepte o rechace la tarea de revisión de un envío. Proporciona información sobre el envío, como el título y el resumen, una fecha límite para la revisión y cómo acceder al propio envío. Este mensaje se emplea cuando se selecciona el proceso de revisión estándar en Gestión > Configuración > Circuito de publicación > Revisión y el acceso al revisor/a con un solo clic está habilitado."
-
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Solicitud de revisión de manuscrito"
-
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Creo que puede ser un excelente revisor/a para el manuscrito &quot;{$submissionTitle}&quot; , por ese motivo le pido que considere llevar a cabo esta importante tarea para nosotros. Las indicaciones para la revisión de la publicación se incluyen más abajo y el envío se adjunta al presente correo electrónico. Debe mandarme por correo electrónico la revisión que haga del envío, junto con su recomendación, antes del {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Indique mediante un correo electrónico antes del {$responseDueDate} si puede y desea realizar la revisión.<br />\n"
-"<br />\n"
-"Gracias por considerar la solicitud.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"Directrices para la revisión<br />\n"
-"<br />\n"
-"{$reviewGuidelines}<br />\n"
-""
-
-msgid "emails.reviewRequestAttached.description"
-msgstr ""
-"El editor/a de la serie envía este correo electrónico al revisor/a para "
-"solicitarle que acepte o rechace la tarea de revisión de un envío. Incluye "
-"el envío como archivo adjunto. Este mensaje se utiliza cuando se selecciona "
-"el proceso de revisión mediante archivos adjuntos a los correos electrónicos "
-"en Gestión > Ajustes > Flujo de trabajo > Revisión. (Si no consulte "
-"REVIEW_REQUEST.)"
+"Ajustes > Flujo de trabajo > Revisión."
 
 msgid "emails.reviewCancel.subject"
 msgstr "Solicitud de revisión cancelada"
@@ -319,24 +259,6 @@ msgstr ""
 "{$signature}"
 
 msgid "emails.reviewRemind.description"
-msgstr "El editor/a de la serie envía este correo electrónico para recordar al revisor/a que finaliza el plazo de revisión."
-
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Recordatorio de revisión del envío"
-
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Este es un pequeño recordatorio de que realizamos una solicitud para que revisara el envío &quot;{$submissionTitle}&quot; para {$contextName}. Esperábamos que la revisión estuviera lista para el {$reviewDueDate} y nos complacería recibirla tan pronto como la tenga preparada.<br />\n"
-"<br />\n"
-"URL del envío: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Confirme que puede completar esta contribución fundamental al trabajo de la editorial. Espero tener noticias suyas.<br />\n"
-"<br />\n"
-"{$signature}"
-
-msgid "emails.reviewRemindOneclick.description"
 msgstr "El editor/a de la serie envía este correo electrónico para recordar al revisor/a que finaliza el plazo de revisión."
 
 msgid "emails.reviewRemindAuto.subject"
