--- a/locale/fr_CA/emails.po
+++ b/locale/fr_CA/emails.po
@@ -12,12 +12,12 @@ msgstr ""
 "Language: \n"
 
 msgid "emails.notification.subject"
-msgstr "Nouvelle notification de {$siteTitle}"
+msgstr "Nouvelle notification de {$contextName}"
 
 #, fuzzy
 msgid "emails.notification.body"
 msgstr ""
-"Vous avez reçu une nouvelle notification de {$siteTitle}:<br />\n"
+"Vous avez reçu une nouvelle notification de {$contextName}:<br />\n"
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
@@ -172,62 +172,7 @@ msgstr ""
 ""
 
 msgid "emails.reviewRequest.description"
-msgstr "Ce courriel est envoyé à un évaluateur par le rédacteur en chef d'une série afin de lui demander s'il accepte ou refuse d'évaluer une soumission. Il contient des informations sur la soumission comme le titre et le résumé de l'article, il indique la date d'échéance pour l'évaluation et explique comment on peut accéder à la soumission. Ce message est utilisé lorsqu'on choisit l'option Processus d'évaluation standard à l'étape 2 de la section Configuration de la presse. (Sinon, voir REVIEW_REQUEST_ATTACHED.)"
-
-msgid "emails.reviewRequestOneclick.subject"
-msgstr "Requête d'évaluation d'un manuscrit"
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Je crois que vous seriez un excellent évaluateur pour le manuscrit &quot;{$submissionTitle}&quot; soumis à la presse {$contextName}. Vous trouverez ci-dessous le résumé de l'article. J'espère que vous accepterez cette tâche importante du processus de publication.<br />\n"
-"<br />\n"
-"Veuillez ouvrir une session sur le site Web d'ici le {$responseDueDate} pour indiquer si vous acceptez ou refusez d'évaluer l'article. Ceci vous permettra également d'accéder à la soumission, et de saisir votre évaluation et vos recommandations.<br />\n"
-"<br />\n"
-"L'évaluation doit être terminée d'ici le {$reviewDueDate}.<br />\n"
-"<br />\n"
-"URL de la soumission: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Merci de votre intérêt à évaluer des articles pour notre presse.<br />\n"
-"<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot;<br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled}<br />\n"
-"{$submissionAbstract}"
-
-msgid "emails.reviewRequestOneclick.description"
-msgstr "Ce courriel est envoyé à un évaluateur par le rédacteur en chef d'une série afin de lui demander s'il accepte ou refuse d'évaluer une soumission. Il fournit des informations sur la soumission comme le titre et le résumé de l'article, il indique la date d'échéance pour l'évaluation et explique comment on peut accéder à la soumission. Ce message est utilisé lorsqu'on choisit l'option Processus d'évaluation standard à l'étape 2 de la section Configuration de la presse, et que l'on a activé l'option permettant à l'évaluateur d'avoir accès à la soumission en un seul clic."
-
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Requête d'évaluation d'un manuscrit"
-
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Je crois que vous seriez un excellent évaluateur pour le manuscrit &quot;{$submissionTitle}&quot; et nous vous serions reconnaissants si vous acceptiez cette tâche importante. Vous trouverez ci-dessous les lignes directrices de cette presse concernant l'évaluation. Vous trouverez également la soumission en pièce jointe. Votre évaluation de la soumission et vos recommandations devraient nous parvenir par courriel d'ici le {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Veuillez répondre à ce courriel d'ici le {$responseDueDate} pour confirmer si vous acceptez d'évaluer cet article.<br />\n"
-"<br />\n"
-"<br />\n"
-"Nous vous remercions à l'avance et espérons que vous accepterez cette requête.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"Lignes directrices concernant l'évaluation<br />\n"
-"<br />\n"
-"{$reviewGuidelines}<br />\n"
-""
-
-msgid "emails.reviewRequestAttached.description"
-msgstr "Ce courriel est envoyé par le rédacteur en chef d'une série à un évaluateur afin de lui demander s'il accepte ou refuse d'évaluer une soumission. Il contient la soumission en pièce jointe. Ce message est utilisé lorsque vous sélectionnez l'option Processus d'évaluation par courriel avec pièce jointe à l'étape 2 de la Configuration de la presse. (Sinon, voir REVIEW_REQUEST.)"
+msgstr "Ce courriel est envoyé à un évaluateur par le rédacteur en chef d'une série afin de lui demander s'il accepte ou refuse d'évaluer une soumission. Il contient des informations sur la soumission comme le titre et le résumé de l'article, il indique la date d'échéance pour l'évaluation et explique comment on peut accéder à la soumission. Ce message est utilisé lorsqu'on choisit l'option Processus d'évaluation standard à l'étape 2 de la section Configuration de la presse."
 
 msgid "emails.reviewCancel.subject"
 msgstr "Annulation de la requête d'évaluation"
@@ -292,24 +237,6 @@ msgstr ""
 "{$signature}"
 
 msgid "emails.reviewRemind.description"
-msgstr "Ce courriel est envoyé par le rédacteur en chef d'une série pour rappeler à l'évaluateur qu'il doit envoyer sa soumission dès que possible."
-
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Rappel d'évaluation"
-
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Nous vous remercions d'avoir accepté d'évaluer &quot;{$submissionTitle}&quot; pour la presse {$contextName}. Veuillez noter que cette évaluation doit nous parvenir avant le {$reviewDueDate}. Nous vous serions reconnaissants si vous pouviez nous faire parvenir votre évaluation dans les plus brefs délais<br />\n"
-"<br />\n"
-"URL de la soumission: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Nous vous prions de confirmer si vous êtes encore disponible pour participer à cette étape cruciale de notre processus éditorial. Nous vous prions d'agréer l'expression de nos sentiments les plus distingués. <br />\n"
-"<br />\n"
-"{$signature}"
-
-msgid "emails.reviewRemindOneclick.description"
 msgstr "Ce courriel est envoyé par le rédacteur en chef d'une série pour rappeler à l'évaluateur qu'il doit envoyer sa soumission dès que possible."
 
 msgid "emails.reviewRemindAuto.subject"
