--- a/locale/gl_ES/emails.po
+++ b/locale/gl_ES/emails.po
@@ -182,7 +182,7 @@ msgstr ""
 
 msgid "emails.notification.body"
 msgstr ""
-"Tes unha nova notificación de {$siteTitle}:<br />\n"
+"Tes unha nova notificación de {$contextName}:<br />\n"
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
@@ -193,7 +193,7 @@ msgstr ""
 "{$signature}<hr />{$unsubscribeLink}"
 
 msgid "emails.notification.subject"
-msgstr "Nova notificación de {$siteTitle}"
+msgstr "Nova notificación de {$contextName}"
 
 msgid "emails.reviewRequest.body"
 msgstr ""
@@ -255,11 +255,6 @@ msgstr ""
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Recordatorio automático de revisión do envío"
 
-msgid "emails.reviewRemindOneclick.description"
-msgstr ""
-"Este correo electrónico é enviado por un editor/a para lembrar a un revisor/"
-"a que remata o prazo da revisión."
-
 msgid "emails.reviewRemind.body"
 msgstr ""
 "{$recipientName}: <br />\n"
@@ -282,25 +277,6 @@ msgstr ""
 "editorial. Ficamos a espera do seu contacto.. <br />\n"
 "<br />\n"
 "{$signature}"
-
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"{$recipientName}: <br />\n"
-"<br />\n"
-"Só un recordatorio da solicitude de revisión do envío "
-"&quot;{$submissionTitle}&quot; para {$contextName}. Agardabamos recibir esta "
-"revisión antes do {$reviewDueDate} e estaríamos encantados de recibila en "
-"canto a teña preparada. <br />\n"
-"<br />\n"
-"URL do envío: {$reviewAssignmentUrl} <br />\n"
-"<br />\n"
-"Confirme a súa capacidade para completar esta contribución ao traballo da "
-"editorial. Ficamos a espera do seu contacto. <br />\n"
-"<br />\n"
-"{$signature}"
-
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Recordatorio de revisión do envío"
 
 msgid "emails.reviewRemind.description"
 msgstr ""
@@ -385,40 +361,6 @@ msgstr ""
 msgid "emails.reviewCancel.subject"
 msgstr "Solicitude de revisión cancelada"
 
-msgid "emails.reviewRequestAttached.description"
-msgstr ""
-"O editor/a envía este correo electrónico a un revisor/a para solicitar que "
-"acepte ou rexeite a tarefa de revisar un envío. Inclúe a presentación como "
-"anexo. Esta mensaxe úsase cando o proceso de revisión mediante anexos ao "
-"correo electrónico está seleccionado en Xestión > Configuración > Fluxo de "
-"traballo > Revisar. (Se non, consulte REVIEW_REQUEST.)"
-
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"{$recipientName}: <br />\n"
-"<br />\n"
-"Creo que podes ser un excelente revisor do manuscrito, "
-"&quot;{$submissionTitle}&quot; e pídoche que consideres emprender esta "
-"importante tarefa. A continuación engádense as Directrices de revisión desta "
-"publicación e o envío está anexo a este correo electrónico. A túa revisión "
-"do envío, xunto coa túa recomendación, debes envialas por correo electrónico "
-"antes do {$reviewDueDate}. <br />\n"
-"<br />\n"
-"Indica nun correo electrónico antes do {$responseDueDate} se es capaz e estás "
-"disposto a facer a revisión. <br />\n"
-"<br />\n"
-"Grazas por considerar esta solicitude. <br />\n"
-"<br />\n"
-"{$signature} <br />\n"
-"<br />\n"
-"<br />\n"
-"Directrices de revisión <br />\n"
-"<br />\n"
-"{$reviewGuidelines} <br />\n"
-
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Solicitude de revisión do manuscrito"
-
 msgid "emails.reviewResponseOverdueAutoOneclick.description"
 msgstr ""
 "Este correo electrónico envíase automaticamente cando transcorre a data "
@@ -498,51 +440,10 @@ msgstr ""
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Solicitude de revisión do manuscrito"
 
-msgid "emails.reviewRequestOneclick.description"
-msgstr ""
-"Este correo electrónico do editor/a a un revisor/a solicita que o revisor/a "
-"acepte ou rexeite a tarefa de revisar un envío. Ofrece información sobre o "
-"envío, como o título e o resumo, a data límite de revisión e como acceder ao "
-"envío. Esta mensaxe úsase cando o proceso de revisión estándar está "
-"seleccionado en Xestión > Configuración > Fluxo de traballo > Revisar e o "
-"acceso cun clic está habilitado."
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Creo que podes ser un excelente revisor do manuscrito, "
-"&quot;{$submissionTitle}&quot;, que se enviou a {$contextName}. A "
-"continuación insírese o resumo do envío e espero que consideres realizar "
-"esta importante tarefa para nós.<br />\n"
-"<br />\n"
-"Inicie sesión no sitio web da publicación antes do {$responseDueDate} para "
-"indicar se realizará ou non a revisión, así como para acceder á presentación "
-"e rexistrar a súa revisión e recomendación.<br />\n"
-"<br />\n"
-"A revisión debe estar rematada antes do {$reviewDueDate}.<br />\n"
-"<br />\n"
-"URL do envío: {$reviewAssignmentUrl} <br />\n"
-"<br />\n"
-"Grazas por considerar esta solicitude.<br />\n"
-"<br />\n"
-"{$signature} <br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$ submissionTitle}&quot; <br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled} <br />\n"
-"{$submissionAbstract}"
-
-msgid "emails.reviewRequestOneclick.subject"
-msgstr "Solicitude de revisión dun manuscrito"
-
 msgid "emails.reviewRequest.description"
 msgstr ""
 "Este correo electrónico do editor/a a un revisor/a solicita que o revisor "
 "acepte ou rexeite a tarefa de revisar un envío. Ofrece información sobre o "
 "envío, como o título e o resumo, a data límite de revisión e como acceder ao "
 "envío. Esta mensaxe úsase cando o proceso de revisión estándar está "
-"seleccionado en Xestión > Configuración > Fluxo de traballo > Revisar. (Se "
-"non, consulte REVIEW_REQUEST_ATTACHED.)"
+"seleccionado en Xestión > Configuración > Fluxo de traballo > Revisar."
