--- a/locale/hu_HU/emails.po
+++ b/locale/hu_HU/emails.po
@@ -85,48 +85,6 @@ msgstr ""
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Kézirat bírálatának kérése"
 
-msgid "emails.reviewRequestOneclick.description"
-msgstr ""
-"Ezt az emailt a Sorozatszerkesztő küldi a Bírálónak, megkérve, hogy vállalja "
-"el, vagy, ha nem alkalmas, akkor utasítsa el a beküldött anyag bírálati "
-"feladatát. Ez tájékoztatást ad a beküldött anyagról, úgymint cím, absztrakt, "
-"a bírálati beküldés határideje, valamint hogyan lehet hozzáférni magához az "
-"anyaghoz. Ez az üzenetet akkor kerül használatra, ha az Általános bírálati "
-"folyamat van kiválasztva a Beállítások > Munkafolyamat > Bírálat részben, és "
-"az Egy kattintásos bírálat hozzáférése engedélyezett."
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Úgy gondolom, hogy Ön a megfelelő szakértő az alábbi cikk bírálatára "
-"&quot;{$submissionTitle},&quot; amelyet benyújtottak a(z) {$contextName} "
-"oldalnak. A beküldött anyag absztraktját lentebb közöljük, és bízom benne, "
-"hogy el tudja vállalni a feladatot.<br />\n"
-"<br />\n"
-"Kérem, lépjen be és jelezze a kiadó weboldalán legkésőbb {$responseDueDate} "
-"dátumig, hogy vállalja a bírálati munkát, vagy sem, valamint, hogy "
-"hozzáférjen a beküldött anyaghoz, és rögzítse bírálatát és javaslatait.<br />"
-"\n"
-"<br />\n"
-"A bírálat beküldésének határideje: {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Kézirat URL: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Köszönjük, hogy foglalkozik a kérésünkkel.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot;<br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled}<br />\n"
-"{$submissionAbstract}"
-
-msgid "emails.reviewRequestOneclick.subject"
-msgstr "Kézirat bírálatának kérése"
-
 msgid "emails.reviewRequest.description"
 msgstr ""
 "Ezt az emailt a Sorozatszerkesztő küldi a Bírálónak, megkérve, hogy vállalja "
@@ -134,8 +92,7 @@ msgstr ""
 "beküldött anyagról, úgymint cím, absztrakt, a bírálat beküldésének "
 "határideje, valamint hogyan lehet hozzáférni magához az anyaghoz. Ez az "
 "üzenet akkor kerül használatra, ha az Általános bírálati folyamat van "
-"kiválasztva a  Beállítások > Munkafolyamat > Bírálat részben. (Lásd még "
-"REVIEW_REQUEST_ATTACHED.)"
+"kiválasztva a  Beállítások > Munkafolyamat > Bírálat részben."
 
 msgid "emails.reviewRequest.body"
 msgstr ""
@@ -329,7 +286,7 @@ msgstr ""
 
 msgid "emails.notification.body"
 msgstr ""
-"Önnek egy új értesítése van a(z) {$siteTitle} oldaltól:<br />\n"
+"Önnek egy új értesítése van a(z) {$contextName} oldaltól:<br />\n"
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
@@ -340,42 +297,7 @@ msgstr ""
 "{$signature}<hr />{$unsubscribeLink}"
 
 msgid "emails.notification.subject"
-msgstr "Új értesítés a(z) {$siteTitle} oldaltól"
-
-msgid "emails.reviewRequestAttached.description"
-msgstr ""
-"Ezt az e-mailt a Sorozatszerkesztő küldi a Bírálónak, hogy megkérje, fogadja "
-"el vagy utasítsa vissza a beküldött anyag bírálati feladatát. Mellékletként "
-"tartalmazza a beküldött anyagot. Ezt az üzenetet a rendszer akkor használja, "
-"ha az E-mail melléklet bírálati folyamat van kiválasztva a Beállítások > "
-"Munkafolyamat > Bírálat részben. (Lásd REVIEW_REQUEST.)"
-
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"Tisztelt {$recipientName}!<br />\n"
-"<br />\n"
-"Úgy vélem, hogy Ön kiválóan alkalmas lenne a(z) "
-"&quot;{$submissionTitle},&quot; című kézirat bírálójának, és arra kérem, "
-"hogy fontolja meg, hogy vállalja-e ezt a fontos feladatot számunkra. A "
-"Bírálati útmutatót az alábbiakban mellékeljük, a beküldött anyagot pedig "
-"csatoltuk ehhez az e-mailhez. A beküldött anyag bírálatát a javaslataival "
-"együtt e-mailben kell elküldenie nekem az alábbi dátumig: {$reviewDueDate}.<"
-"br />\n"
-"<br />\n"
-"Kérjük, hogy jelezze e-mailben, hogy alkalmas-e Önnek és szeretné-e "
-"elkészíteni a bírálatot eddig az időpontig: {$responseDueDate} <br />\n"
-"<br />\n"
-"Köszönjük, hogy foglalkozik kérésünkkel.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"Bírálati útmutató<br />\n"
-"<br />\n"
-"{$reviewGuidelines}<br />\n"
-
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Kézirat bírálatának kérése"
+msgstr "Új értesítés a(z) {$contextName} oldaltól"
 
 msgid "emails.reviewResponseOverdueAutoOneclick.description"
 msgstr ""
@@ -465,30 +387,6 @@ msgstr ""
 
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Automatikus bírálati emlékeztető"
-
-msgid "emails.reviewRemindOneclick.description"
-msgstr ""
-"Ezt az emailt a Sorozatszerkesztő küldi a bírálónak, hogy emlékeztesse a "
-"bírálati határidőre."
-
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"Tisztelt {$recipientName}!<br />\n"
-"<br />\n"
-"Ez egy emlékeztető a(z) \"{$submissionTitle},\" című cikk bírálati "
-"munkájával kapcsolatban a(z) {$contextName} oldaltól. Reméljük, hogy a "
-"megadott {$reviewDueDate} határidőig el tud készülni a bírálattal, örömmel "
-"fogadjuk, amint elkészül vele.<br />\n"
-"<br />\n"
-"Kézirat URL: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Kérjük, erősítse meg, hogy tudja vállalni ezt a fontos munkát a részünkre. "
-"Várjuk a válaszát.<br />\n"
-"<br />\n"
-"{$signature}"
-
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Bírálati emlékeztető"
 
 msgid "emails.reviewRemind.description"
 msgstr ""
