--- a/locale/mk_MK/emails.po
+++ b/locale/mk_MK/emails.po
@@ -40,46 +40,6 @@ msgstr ""
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Барање за преглед на ракописи"
 
-msgid "emails.reviewRequestOneclick.description"
-msgstr ""
-"Оваа е-пошта од Уредникот на серии до Рецензент бара рецензентот да ја "
-"прифати или одбие задачата за преглед на поднесокот. Дава информации за "
-"поднесокот, како што се насловот и апстрактот, датумот на достасување на "
-"прегледот и начинот на пристап до самиот поднесок. Оваа порака се користи "
-"кога е избран Стандардниот процес на преглед во Управување> Поставки> "
-"Работно време> Преглед и е овозможен пристап со преглед на еден клик."
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"{$recipientName}: <br />\n"
-"<br />\n"
-"Верувам дека ќе послужите како одличен рецензент на ракописот, &quot; "
-"{$missionTitle}, &quot; што е доставено до {$textName}. Апстрактот на "
-"поднесокот е вметнат подолу, и се надевам дека ќе размислите да ја преземете "
-"оваа важна задача за нас. <br />\n"
-"<br />\n"
-"Ве молиме, најавете се на веб-страницата за печат до {$responseDueDate} за да "
-"наведете дали ќе го направите прегледот или не, како и да пристапите до "
-"поднесувањето и да ги снимите прегледот и препораката. <br />\n"
-"<br />\n"
-"Самиот преглед е доставен {$reviewDueDate}. <br />\n"
-"<br />\n"
-"URL на поднесување: {$missionReviewUrl} <br />\n"
-"<br />\n"
-"Ви благодариме што го разгледавте ова барање. <br />\n"
-"<br />\n"
-"{$signature} <br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot; {$missionTitle} &quot; <br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled} <br />\n"
-"{$submissionAbstract}"
-
-msgid "emails.reviewRequestOneclick.subject"
-msgstr "Барање за преглед на ракописи"
-
 msgid "emails.reviewRequest.description"
 msgstr ""
 "Оваа е-пошта од Уредникот на серии до Рецензент бара рецензентот да ја "
@@ -87,7 +47,7 @@ msgstr ""
 "поднесокот, како што се насловот и апстрактот, датумот на достасување на "
 "прегледот и начинот на пристап до самиот поднесок. Оваа порака се користи "
 "кога е избран Стандардниот процес на преглед во Управување> Поставки> "
-"Работно време> Преглед. (Инаку, видете во REVIEW_REQUEST_ATTACHED.)"
+"Работно време> Преглед."
 
 msgid "emails.reviewRequest.body"
 msgstr ""
@@ -278,7 +238,7 @@ msgstr ""
 
 msgid "emails.notification.body"
 msgstr ""
-"Имате ново известување од {$siteTitle}: <br />\n"
+"Имате ново известување од {$contextName}: <br />\n"
 "<br />\n"
 "{$notificationContents} <br />\n"
 "<br />\n"
@@ -289,7 +249,7 @@ msgstr ""
 "{$signature}<hr />{$unsubscribeLink}"
 
 msgid "emails.notification.subject"
-msgstr "Ново известување од {$ siteTitle}"
+msgstr "Ново известување од {$contextName}"
 
 #, fuzzy
 msgid "emails.editorDecisionAccept.body"
@@ -371,31 +331,6 @@ msgstr ""
 
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Автоматски потсетник за преглед на поднесок"
-
-msgid "emails.reviewRemindOneclick.description"
-msgstr ""
-"Оваа е-пошта е испратена од Уредувач на серии за да го потсети прегледникот "
-"дека треба да се прегледа."
-
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"{$recipientName}: <br />\n"
-"<br />\n"
-"Само мал потсетник за нашето барање за преглед на поднесокот, &quot; "
-"{$submissionTitle}, &quot; за {$contextName}. Се надевавме дека ќе го "
-"добиеме овој преглед до {$reviewDueDate} и со задоволство ќе го добиеме "
-"веднаш штом ќе бидете во можност да го подготвите. <br />\n"
-"<br />\n"
-"URL на поднесување: {$reviewAssignmentUrl} <br />\n"
-"<br />\n"
-"Ве молиме, потврдете ја вашата способност да го завршите овој витален "
-"придонес во работата на печатот. Со нетрпение очекувам да се слушнам со вас. "
-"<br />\n"
-"<br />\n"
-"{$signature}"
-
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Потсетник за преглед на поднесување"
 
 msgid "emails.reviewRemind.description"
 msgstr ""
@@ -504,40 +439,6 @@ msgstr ""
 
 msgid "emails.reviewCancel.subject"
 msgstr "Барањето за преглед е откажано"
-
-msgid "emails.reviewRequestAttached.description"
-msgstr ""
-"Оваа е-пошта е испратена од Уредникот на серии до рецезентот за да побара "
-"тие да ја прифатат или одбијат задачата за преглед на поднесокот. Тоа го "
-"вклучува поднесокот како прилог. Оваа порака се користи кога е избран "
-"Процесот за преглед на е-пошта, во Управување> Поставки> Работен тек> "
-"Преглед. (Во спротивно, видете  REVIEW_REQUEST.)"
-
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"{$recipientName}: <br />\n"
-"<br />\n"
-"Верувам дека ќе послужите како одличен рецензент на ракописот, &quot; "
-"{$missionTitle}, &quot; и барам да размислите да ја преземете оваа важна "
-"задача за нас. Упатствата за преглед на овој печат се додадени подолу, а "
-"поднесувањето е приложено на оваа е-пошта. Вашиот преглед на поднесувањето, "
-"заедно со вашата препорака, треба да ми биде испратен по е-пошта до "
-"{$reviewDueDate}. <br />\n"
-"<br />\n"
-"Ве молиме наведете во повратна е-пошта до {$responseDueDate} дали сте во "
-"можност и дали сакате да го направите прегледот. <br />\n"
-"<br />\n"
-"Ви благодариме што го разгледавте ова барање. <br />\n"
-"<br />\n"
-"{$signature} <br />\n"
-"<br />\n"
-"<br />\n"
-"Прегледајте ги упатствата <br />\n"
-"<br />\n"
-"{$reviewGuidance} <br />\n"
-
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Барање за преглед на ракописи"
 
 msgid "emails.reviewResponseOverdueAutoOneclick.description"
 msgstr ""
