--- a/locale/nb_NO/emails.po
+++ b/locale/nb_NO/emails.po
@@ -291,30 +291,6 @@ msgstr ""
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Automatisk påminnelse om fagfellevurdering"
 
-msgid "emails.reviewRemindOneclick.description"
-msgstr ""
-"Denne e-posten blir sendt av serieredaktøren til en fagfelle for å minne dem "
-"om at fagfellevurderingen skulle ha blitt sendt inn."
-
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Dette er bare for å minne deg om får forespørsel om din fagfellevurdering av "
-"innleveringen &quot;{$submissionTitle}&quot; til {$contextName}. Vi hadde "
-"håpet på å motta ditt svar senest den {$responseDueDate}, og ser frem til å "
-"motta den, så snart du er ferdig med den.<br />\n"
-"<br />\n"
-"Innleveringens URL: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Vi ber deg bekrefte om du er i stand til at fullføre dette vigtige bidraget "
-"til vårt arbeid. Jeg ser frem til at høre fra deg.<br />\n"
-"<br />\n"
-"{$signature}"
-
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Påminnelse om fagfellevurdering"
-
 msgid "emails.reviewRemind.description"
 msgstr ""
 "Denne e-posten sendes av seksjonsredaktøren til en fagfelle for å minne ham "
@@ -425,39 +401,6 @@ msgstr ""
 msgid "emails.reviewCancel.subject"
 msgstr "Avbryt forespørsel om fagfellevurdering"
 
-msgid "emails.reviewRequestAttached.description"
-msgstr ""
-"Denne e-posten blir sendt av serieredaktøren til en fagfelle og ber dem om å "
-"godta eller nekte å vurdere en innlevering. Innleveringen er vedlagt denne e-"
-"posten. Denne meldingen brukes hvis den valgte prosessinnstillingen at \""
-"Innlevering er vedlagt e-post\" er valgt"
-
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Jeg tror at du vil kunne være en fremragende fagfelle til innleveringen "
-"&quot;{$submissionTitle}&quot;, og jeg ber deg om å vurdere å påta deg denne "
-"vigtige opgaven for oss. Du finner denne utgiverens retningslinjer for "
-"fagfellevurdering nedenfor og innleveringen er lagt til som vedlegg til "
-"denne e-posten. Din vurdering av innleveringen samt din anbefaling må sendes "
-"til meg pr. e-post senest den {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Vennligst gi beskjed per e-post innen den {$responseDueDate} , om du kan og er "
-"villig til å foreta fagfellevurderingen.<br />\n"
-"<br />\n"
-"Takk for at du vurderer denne forespøreselen.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"Retningslinjer for fagfellevurdering<br />\n"
-"<br />\n"
-"{$reviewGuidelines}<br />\n"
-
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Forespørsel om fagfellevurdering"
-
 msgid "emails.reviewResponseOverdueAutoOneclick.description"
 msgstr ""
 "Denne e-posten sendes automatisk når en fagfelles svarfrist er overskredet ("
@@ -537,47 +480,6 @@ msgstr ""
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Forespørsel om fagfellevurdering"
 
-msgid "emails.reviewRequestOneclick.description"
-msgstr ""
-"Denne e-postmeldingen fra serieredaktøren til en fagfelle ber fagfellen om å "
-"godta eller avslå å vurdere en innlevering. Den inneholder informasjon om "
-"innleveringen, f.eks. tittel og sammendrag, forfallsdato for vurdering, samt "
-"hvordan man kan få tilgang til selve innleveringen. Denne meldingen brukes "
-"hvis alternativet for standard fagfellevurdering er valgt under "
-"Innstillinger > Arbeidsflyt > Vurdering og tilgang for fagfeller med ett "
-"klikk er aktivert."
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Jeg tror, at du vil være en utmerket fagfelle for innleveringen "
-"&quot;{$submissionTitle}&quot;, som har blitt levert inn til {$contextName}. "
-"Nedenfor finder du et sammendrag av innleveringen, og jeg håper, at du vil "
-"vurdere å påta deg denne vigtige opgaven for oss.<br />\n"
-"<br />\n"
-"Logg på utgiverens nettsted innen {$responseDueDate} for å gi beskjed om du "
-"vil påta deg fagfellevurderingen eller ikke, samt for å få adgang til "
-"innleveringen og registrere din vurdering og anbefaling.<br />\n"
-"<br />\n"
-"Selve vurderingen må leveres senest den {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Innleveringens URL-adresse: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Tak for at du vurderer denne forespørselen.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot;<br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled}<br />\n"
-"{$submissionAbstract}"
-
-msgid "emails.reviewRequestOneclick.subject"
-msgstr "Forespørsel om fagfellevurdering"
-
 msgid "emails.reviewRequest.description"
 msgstr ""
 "Denne e-postmeldingen fra serieredaktøren til en fagfelle ber fagfellen om å "
@@ -585,7 +487,7 @@ msgstr ""
 "informasjon om innleveringen, som tittel og sammendrag, forfallsdato for "
 "gjennomgang, og hvordan du får tilgang til selve innleveringen. Denne "
 "meldingen brukes når standard vurderingsprosess er valgt i Innstillinger > "
-"Arbeidsflyt > Vurdering. (Se også REVIEW_REQUEST_ATTACHED.)"
+"Arbeidsflyt > Vurdering."
 
 msgid "emails.reviewRequest.body"
 msgstr ""
@@ -776,7 +678,7 @@ msgstr ""
 #, fuzzy
 msgid "emails.notification.body"
 msgstr ""
-"Du har mottatt en ny melding fra {$siteTitle}: <br />\n"
+"Du har mottatt en ny melding fra {$contextName}: <br />\n"
 "<br />\n"
 "{$notificationContents} <br />\n"
 "<br />\n"
@@ -787,4 +689,4 @@ msgstr ""
 "{$signature}"
 
 msgid "emails.notification.subject"
-msgstr "Ny melding fra {$siteTitle}"
+msgstr "Ny melding fra {$contextName}"
