--- a/locale/pl_PL/emails.po
+++ b/locale/pl_PL/emails.po
@@ -13,7 +13,7 @@ msgstr ""
 "X-Generator: Weblate 3.9.1\n"
 
 msgid "emails.notification.subject"
-msgstr "Nowe powiadomienie od {$siteTitle}"
+msgstr "Nowe powiadomienie od {$contextName}"
 
 msgid "emails.reviewRequest.body"
 msgstr ""
@@ -153,7 +153,7 @@ msgstr ""
 #, fuzzy
 msgid "emails.notification.body"
 msgstr ""
-"Masz nowe powiadomienie od {$siteTitle}:<br />\n"
+"Masz nowe powiadomienie od {$contextName}:<br />\n"
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
@@ -170,14 +170,6 @@ msgstr ""
 
 msgid "emails.reviewCancel.subject"
 msgstr "Prośba o anulowanie recenzji"
-
-msgid "emails.reviewRemindOneclick.description"
-msgstr ""
-"Ten mail jest wysłany przed redaktora serii do recenzenta z przypomnieniem o "
-"zbliżającym się terminie recenzji."
-
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Przypomnienie o recenzji zgłoszenia"
 
 msgid "emails.reviewRemind.description"
 msgstr ""
@@ -223,9 +215,6 @@ msgstr ""
 
 msgid "emails.reviewReinstate.subject"
 msgstr "Ponowienie prośby o recenzję"
-
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Prośba o recenzję rękopisu"
 
 msgid "emails.notificationCenterDefault.body"
 msgstr "Proszę, wprowadź treść swojej wiadomości."
@@ -342,12 +331,6 @@ msgstr ""
 "Jeśli nie możesz podjąć się tego zlecenialub masz jakiekolwiek pytania, "
 "proszę, skontaktuj się ze mną. Dziękujemy, za Twój wkład w pracę wydawnictwa."
 
-msgid "emails.reviewRequestAttached.description"
-msgstr ""
-"Ten mail został wysłany przez redaktora serii do recenzenta z prośbą o "
-"przyjęcie lub odrzucenie zlecenia recenzji tekstu. W załączniku link do "
-"zaproponowanego tekstu. Wiadomość (...)"
-
 msgid "emails.reviewRemindAutoOneclick.description"
 msgstr ""
 "Ten email jest automatycznie wysłany, kiedy recenzentowi upłynął termin ("
@@ -429,29 +412,6 @@ msgstr ""
 "Z poważaniem,<br />\n"
 "{$signature}<br />\n"
 
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Ufam, że będziesz świetnym recenzentem manuskryptu, "
-"&quot;{$submissionTitle},&quot; i proszę o rozważenie podjęcia się tego "
-"ważnego dla nas zadania. Wskazówki dla recenzentów naszego wydawnictwa są "
-"załączone poniżej, a zgłoszenie znajduje się w załączniku emaila. Twoja "
-"recenzja zgłoszenia, razem z rekomendacjami powinna być wysłana do mnie "
-"emailem przed: {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Proszę, określ w odpowiedzi na tę wiadomość przed {$responseDueDate}, czy masz "
-"możliwość i chęć podjęcia się recenzji.<br />\n"
-"<br />\n"
-"Dziękujemy za rozpatrzenie naszej prośby.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"Wskazówki dla recenzentów<br />\n"
-"<br />\n"
-"{$reviewGuidelines}<br />\n"
-
 msgid "emails.reviewResponseOverdueAuto.description"
 msgstr ""
 "Ten mail jest wysłany automatycznie, kiedy upływa data potwierdzenia "
@@ -524,56 +484,18 @@ msgstr ""
 "Dziękujemy,<br />\n"
 "{$signature}"
 
-msgid "emails.reviewRequestOneclick.description"
-msgstr ""
-"Ten mail od Redaktora Serii do Recenzenta zawiera prośbę o akceptację lub "
-"odrzucenie zadania napisania recenzji zgłoszenia. Dostarcza informacji o "
-"zgłoszeniu, tj. tytuł i abstrakt, termin oddania recenzji i jak uzyskać "
-"dostęp do zgłoszenia. Wiadomość jest wysyłana, kiedy zaznaczono Standardowy "
-"Proces Recenzji w segmencie Zarządzanie>Ustawienia>Workflow>Recenzja i kiedy "
-"aktywowano przełącznik one-click recenzenta."
-
 msgid "emails.reviewRequest.description"
 msgstr ""
 "Ten mail od Redaktora Serii do Recenzenta zawiera prośbę o akceptację lub "
 "odrzucenie zadania napisania recenzji zgłoszenia. Dostarcza informacji o "
 "zgłoszeniu, tj. tytuł i abstrakt, termin oddania recenzji i jak uzyskać "
 "dostęp do zgłoszenia. Wiadomość jest wysyłana, kiedy zaznaczono Standardowy "
-"Proces Recenzji w segmencie Zarządzanie>Ustawienia>Workflow>Recenzja. (W "
-"przeciwnym wypadku zobacz REVIEW_REQUEST_ATTACHED.)"
+"Proces Recenzji w segmencie Zarządzanie>Ustawienia>Workflow>Recenzja."
 
 msgid "emails.submissionAckNotUser.description"
 msgstr ""
 "Ten email, uaktywniony, jest automatycznie wysyłany do innych autorów, "
 "którzy nie są użytkownikami OMP określonego w procesie zgłoszenia."
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Ufam, że będziesz świetnym recenzentem manuskryptu "
-"&quot;{$submissionTitle},&quot; które zostało zgłoszone do: {$contextName}. "
-"Abstrakt zgłoszenia został załączony poniżej, mam nadzieję, że rozważysz "
-"podjęcie się tego ważnego dla nas zadania. <br />\n"
-"<br />\n"
-"Proszę, zaloguj się na stronę wydawnictwa przed {$responseDueDate}, aby "
-"oświadczyć, czy podejmujesz się recenzji, a także aby mieć dostęp do "
-"zgłoszenia oraz wgrać swoje recenzje i rekomendacje.<br />\n"
-"<br />\n"
-"Termin oddania recenzji: {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Adres URL zgłoszenia: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Dziękujemy, za rozpatrzenie naszej prośby.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot;<br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled}<br />\n"
-"{$submissionAbstract}"
 
 msgid "emails.editorAssign.subject"
 msgstr "Zadania redakcyjne"
@@ -732,22 +654,6 @@ msgstr ""
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Automatyczne przypomnienie o recenzji zgłoszenia"
 
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Przypomnienie o naszej prośbie o recenzje zgłoszonego tekstu,  "
-"&quot;{$submissionTitle},&quot; dla {$contextName}. Mamy nadzieję na "
-"otrzymanie recenzji przed {$reviewDueDate}, prosimy o dostarczenie jej na "
-"tyle szybko, na ile jest w stanie Pan/ Pani ją przygotować. .<br />\n"
-"<br />\n"
-"URL zgłoszonego tekstu: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Prosimy, potwierdź możliwość wniesienia tego znaczącego wkładu w pracę "
-"wydawnictwa. Z niecierpliwością oczekuję na odpowiedź. .<br />\n"
-"<br />\n"
-"{$signature}"
-
 msgid "emails.reviewDecline.body"
 msgstr ""
 "Redaktor (redaktorzy): :<br />\n"
@@ -772,9 +678,6 @@ msgid "emails.reviewResponseOverdueAutoOneclick.subject"
 msgstr "Prośba o recenzję rękopisu"
 
 msgid "emails.reviewResponseOverdueAuto.subject"
-msgstr "Prośba o recenzję rękopisu"
-
-msgid "emails.reviewRequestOneclick.subject"
 msgstr "Prośba o recenzję rękopisu"
 
 msgid "emails.editorAssign.description"
