--- a/locale/pt_BR/emails.po
+++ b/locale/pt_BR/emails.po
@@ -16,11 +16,11 @@ msgstr ""
 "X-Generator: Weblate 3.9.1\n"
 
 msgid "emails.notification.subject"
-msgstr "Nova notificação de {$siteTitle}"
+msgstr "Nova notificação de {$contextName}"
 
 msgid "emails.notification.body"
 msgstr ""
-"Chegou uma nova notificação de {$siteTitle}:<br />\n"
+"Chegou uma nova notificação de {$contextName}:<br />\n"
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
@@ -196,79 +196,7 @@ msgstr ""
 "avaliar a submissão. Fornece informações sobre a submissão, como título e "
 "resumo, a data de entrega da avaliação e como acessar a submissão. A "
 "mensagem é usada quando o processo de avaliação padrão é o definido no passo "
-"2 da configuração da editora (Caso contrário, veja REVIEW_REQUEST_ATTACHED)."
-
-msgid "emails.reviewRequestOneclick.subject"
-msgstr "Solicitação de avaliação"
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"{$recipientName},<br />\n"
-"<br />\n"
-"Acreditamos que será um excelente avaliador para o manuscrito "
-"&quot;{$submissionTitle}&quot;, enviado à editora {$contextName}. O resumo "
-"da submissão está incluído na mensagem e esperamos que considere assumir "
-"esta importante tarefa para nós.<br />\n"
-"<br />\n"
-"Acesse o sistema até {$responseDueDate} para indicar se aceitará ou não "
-"realizar a avaliação, bem como acessar a submissão e registrar sua avaliação "
-"e recomendação.<br />\n"
-"<br />\n"
-"O prazo de entrega da avaliação é {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Página da submissão: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Agradecemos por considerar nossa solicitação.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot;<br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled}<br />\n"
-"{$submissionAbstract}"
-
-msgid "emails.reviewRequestOneclick.description"
-msgstr ""
-"Esta mensagem do editor de série solicita ao avaliador que aceite ou não "
-"avaliar a submissão. Fornece informações sobre a submissão, como título e "
-"resumo, a data de entrega da avaliação e como acessar a submissão. A "
-"mensagem é usada quando o processo de avaliação padrão é o definido no passo "
-"2 da configuração da editora e o acesso rápido foi habilitado."
-
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Solicitação de avaliação"
-
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"{$recipientName},<br />\n"
-"<br />\n"
-"Acreditamos que será um excelente avaliador para o manuscrito "
-"&quot;{$submissionTitle}&quot; e esperamos que considere assumir esta "
-"importante tarefa para nós. As diretrizes de avaliação da editora estão em "
-"apenso e a submissão está em anexo à mensagem. Sua avaliação e sua "
-"recomendação devem ser encaminhados a este endereço até {$reviewDueDate}.<br "
-"/>\n"
-"<br />\n"
-"Por favor responda a esta mensagem até {$responseDueDate} se está disponível "
-"ou não para realizar a revisão.<br />\n"
-"<br />\n"
-"Agradecemos por considerar nossa solicitação.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"Diretrizes para avaliação<br />\n"
-"<br />\n"
-"{$reviewGuidelines}<br />\n"
-
-msgid "emails.reviewRequestAttached.description"
-msgstr ""
-"Esta mensagem do editor de série solicita ao avaliador que aceite ou não "
-"avaliar a submissão. Inclui a submissão como anexo. Esta mensagem é usada "
-"quando o processo de avaliação via e-mail com anexo é o escolhido no passo 2 "
-"da configuração da editora (Caso contrário, veja REVIEW_REQUEST.)"
+"2 da configuração da editora."
 
 msgid "emails.reviewCancel.subject"
 msgstr "Solicitação de avaliação cancelada"
@@ -334,24 +262,6 @@ msgstr ""
 "{$signature}"
 
 msgid "emails.reviewRemind.description"
-msgstr "Esta mensagem é enviada pelo editor de série lembrando o avaliador de avaliação pendente."
-
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Lembrete de avaliação pendente"
-
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"{$recipientName},<br />\n"
-"<br />\n"
-"Este é apenas um lembrete sobre nossa solicitação de avaliar a submissão &quot;{$submissionTitle}&quot;, enviada à editora {$contextName}. Esperamos que possa concluí-la até {$reviewDueDate}, e agradeceríamos muito recebê-la assim que estiver concluída.<br />\n"
-"<br />\n"
-"Página da submissão: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Confirme sua disponibilidade em concluir esta contribuição vital aos trabalhos da editora. Aguardamos seu contato.<br />\n"
-"<br />\n"
-"{$signature}"
-
-msgid "emails.reviewRemindOneclick.description"
 msgstr "Esta mensagem é enviada pelo editor de série lembrando o avaliador de avaliação pendente."
 
 msgid "emails.reviewRemindAuto.subject"
