--- a/locale/pt_PT/emails.po
+++ b/locale/pt_PT/emails.po
@@ -60,7 +60,7 @@ msgstr ""
 
 msgid "emails.notification.body"
 msgstr ""
-"Tem uma nova notificação de {$siteTitle}:<br />\n"
+"Tem uma nova notificação de {$contextName}:<br />\n"
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
@@ -71,7 +71,7 @@ msgstr ""
 "{$signature}<hr />{$unsubscribeLink}"
 
 msgid "emails.notification.subject"
-msgstr "Nova notificação de {$siteTitle}"
+msgstr "Nova notificação de {$contextName}"
 
 msgid "emails.reviewerRegister.description"
 msgstr ""
@@ -144,54 +144,13 @@ msgstr ""
 "Agradecendo antecipadamente o seu interesse,<br />\n"
 "{$signature}"
 
-msgid "emails.reviewRequestOneclick.description"
-msgstr ""
-"Este e-mail enviado pelo Editor de Secção solicita ao Revisor que aceite ou "
-"rejeite a tarefa de rever a submissão. Fornece informação sobre a submissão "
-"tal como título e resumo, prazo de envio da revisão, e como aceder à "
-"submissão. Esta mensagem é utilizada quando foi selecionado o Processo de "
-"Revisão Padrão em Configurações > Fluxo de Trabalho > Revisão, e foi ativado "
-"o acesso em 1 clique."
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Acreditamos que daria excelente revisor para o manuscrito, "
-"&quot;{$submissionTitle},&quot; que foi submetido a {$contextName}. O resumo "
-"da submissão encontra-se abaixo na mensagem. <br />\n"
-"<br />\n"
-"Entre no sistema com o seu nome de utilizador até {$responseDueDate} para nos "
-"inidicar se está disponível ou não para realizar a tarefa de revisão, bem "
-"como poder visualizar a submissão e registar a sua revisão e recomendações. <"
-"br />\n"
-"<br />\n"
-"Prazo de envio da revisão {$reviewDueDate}.<br />\n"
-"<br />\n"
-"URL da submissão: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Agradecemos por considerar a nossa solicitação.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot;<br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled}<br />\n"
-"{$submissionAbstract}"
-
-msgid "emails.reviewRequestOneclick.subject"
-msgstr "Pedido de revisão"
-
 msgid "emails.reviewRequest.description"
 msgstr ""
 "Este e-mail é enviado pelo Editor de Secção para solicitar ao Revisor que "
 "aceite ou rejeite a tarefa de revisão da submissão. Fornece informação sobre "
 "a submissão, tal como título e resumo, prazo de envio da revisão, e como "
 "aceder à submissão. Esta mensagem é utilizada quando o Processo de Revisão "
-"Padrão foi selecionado em Configurações > Fluxo de trabalho > Revisão. (De "
-"outra forma ver REVIEW_REQUEST_ATTACHED.)"
+"Padrão foi selecionado em Configurações > Fluxo de trabalho > Revisão."
 
 msgid "emails.reviewRequest.body"
 msgstr ""
@@ -263,40 +222,6 @@ msgstr "Agradecimento pela submissão"
 
 msgid "emails.reviewCancel.subject"
 msgstr "Pedido de Revisão Cancelada"
-
-msgid "emails.reviewRequestAttached.description"
-msgstr ""
-"Este e-mail é enviado pelo Editor de Série ao Revisor para lhe solicitar que "
-"aceite ou rejeite a tarefa de rever uma submissão. Inclui a submissão como "
-"anexo. Esta mensagem é utilizada quado o Processo de Revisão com Anexo de E-"
-"mail é selcionado em Configurações > Fluxo de Trabalho > Revisão. (De outra "
-"forma ver REVIEW_REQUEST.)"
-
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Acreditamos que seria uma excelente escolha para revisor do manuscrito "
-"&quot;{$submissionTitle},&quot; e pedimos-lhe que considere realizar esta "
-"importante tarefa para nós. As instruções de revisão desta editora encontram-"
-"se abaixo, e a submissão segue em anexo ao e-mail. A sua revisão da "
-"submissão, bem como a sua recomendação, devem ser enviadas até "
-"{$reviewDueDate}.<br />\n"
-"<br />\n"
-"O prazo de resposta se está ou não disponível para realizar esta revisão é "
-"{$responseDueDate}.<br />\n"
-"<br />\n"
-"Agradecemos considerar a nossa solicitação.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"Instruções de revisão<br />\n"
-"<br />\n"
-"{$reviewGuidelines}<br />\n"
-
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Pedido de Revisão de Manuscrito"
 
 msgid "emails.reviewResponseOverdueAutoOneclick.description"
 msgstr ""
@@ -518,30 +443,6 @@ msgstr ""
 
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Lembrete automático de Revisão da Submissão"
-
-msgid "emails.reviewRemindOneclick.description"
-msgstr ""
-"Este e-mail é enviado pelo Editor de Série para lembrar o revisor que o "
-"prazo de revisão foi ultrapassado."
-
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Este e-mail serve como lembrete do nosso pedido de revisão da submissão, "
-"&quot;{$submissionTitle},&quot; a {$contextName}. Esperávamos receber a "
-"revisão até {$reviewDueDate}, e gostaríamos de a receber o mais breve que "
-"consiga tê-la pronta.<br />\n"
-"<br />\n"
-"URL da Submissão: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Confirme a sua disponibilidade para completar esta contribuição vital ao "
-"trabalho da editora. Ficamos a aguardar o seu contacto.<br />\n"
-"<br />\n"
-"{$signature}"
-
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Lembrete de Revisão da Submissão"
 
 msgid "emails.reviewRemind.description"
 msgstr ""
