--- a/locale/ru_RU/emails.po
+++ b/locale/ru_RU/emails.po
@@ -13,50 +13,9 @@ msgstr ""
 "X-Generator: Weblate 3.9.1\n"
 
 msgid "emails.notification.subject"
-msgstr "Новое сообщение от {$siteTitle}"
+msgstr "Новое сообщение от {$contextName}"
 
 msgid "emails.reviewResponseOverdueAuto.subject"
-msgstr "Запрос на рецензирование рукописи"
-
-msgid "emails.reviewRequestOneclick.description"
-msgstr ""
-"Это письмо редактора серии, отправляемое рецензенту, с запросом согласия или "
-"отказа от выполнения рецензирования рукописи. В письме приводится информация "
-"о материале, такая как название и аннотация, срок выполнения рецензии и как "
-"получить доступ к самому материалу. Это сообщение используется, если выбран "
-"стандартный процесс рецензирования и выбрана опция \"в одно нажатие\" в "
-"настройках Управление > Настройки > Рабочий процесс > Рецензирование."
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"Здравствуйте, {$recipientName}!<br />\n"
-"<br />\n"
-"Я полагаю, что Вы могли бы быть прекрасным рецензентом для рукописи  "
-"&quot;{$submissionTitle} &quot;, которая был направлен в «{$contextName}». "
-"Аннотация рукописи приведена ниже, и я надеюсь, что Вы возьметесь выполнить "
-"эту важную задачу для нас.<br />\n"
-"<br />\n"
-"Пожалуйста, войдите на сайт Издательства до {$responseDueDate}, чтобы "
-"подтвердить Ваше согласие на рецензирование или отказаться от "
-"рецензирования, а также получить доступ к материалу и оставить свою рецензию "
-"и рекомендацию.<br />\n"
-"<br />\n"
-"Сама рецензия должна быть предоставлена до {$reviewDueDate}.<br />\n"
-"<br />\n"
-"URL материала: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Заранее благодарю Вас,<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot;<br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled}<br />\n"
-"{$submissionAbstract}"
-
-msgid "emails.reviewRequestOneclick.subject"
 msgstr "Запрос на рецензирование рукописи"
 
 msgid "emails.reviewRequest.description"
@@ -66,8 +25,7 @@ msgstr ""
 "информация о рукописи, такая как название и аннотация, срок выполнения "
 "рецензии и как получить доступ к самому материалу. Это сообщение "
 "используется, если выбран стандартный процесс рецензирования в Управление > "
-"Настройки > Рабочий процесс > Рецензирование. (В ином случае, смотрите "
-"REVIEW_REQUEST_ATTACHED.)"
+"Настройки > Рабочий процесс > Рецензирование."
 
 msgid "emails.reviewRequest.body"
 msgstr ""
@@ -259,7 +217,7 @@ msgstr ""
 
 msgid "emails.notification.body"
 msgstr ""
-"Вы получили новое уведомление с сайта  «{$siteTitle}}»:<br />\n"
+"Вы получили новое уведомление с сайта  «{$contextName}»:<br />\n"
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
@@ -357,22 +315,6 @@ msgstr ""
 "<br />\n"
 "Пожалуйста, подтвердите, что Вы сможете сделать этот важный вклад в работу "
 "нашего журнала. Жду вашего ответа.<br />\n"
-"<br />\n"
-"{$signature}"
-
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"Здравствуйте, {$recipientName}:<br />\n"
-"<br />\n"
-"Это напоминание о нашем запросе Вашей рецензии на материал "
-"&quot;{$submissionTitle}&quot; для «{$contextName}». Мы надеялись получить "
-"эту рецензию до {$reviewDueDate} и будем рады, если Вы как можно скорее ее "
-"подготовите.<br />\n"
-"<br />\n"
-"URL материала: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Пожалуйста, подтвердите, что Вы сможете сделать этот важный вклад в работу "
-"нашего Издательства. Жду вашего ответа.<br />\n"
 "<br />\n"
 "{$signature}"
 
@@ -609,14 +551,6 @@ msgstr ""
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Автоматическое напоминание о рецензии на материал"
 
-msgid "emails.reviewRemindOneclick.description"
-msgstr ""
-"Это письмо отправляется редактором раздела, чтобы напомнить рецензенту о "
-"том, что срок предоставления рецензии уже прошел."
-
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Напоминание о рецензии на рукопись"
-
 msgid "emails.reviewRemind.description"
 msgstr ""
 "Это письмо отправляется редактором раздела, чтобы напомнить рецензенту о "
@@ -718,40 +652,6 @@ msgstr ""
 
 msgid "emails.reviewCancel.subject"
 msgstr "Запрос на рецензирование отменен"
-
-msgid "emails.reviewRequestAttached.description"
-msgstr ""
-"Это письмо редактора серии, отправляемое рецензенту, с запросом согласия или "
-"отказа от выполнения рецензирования материала. К письму приложен сам "
-"материал для рецензирования. Это сообщение используется, если выбран процесс "
-"рецензирования через электронную почту в Управление > Настройки > Рабочий "
-"процесс > Рецензирование. (В ином случае, смотрите REVIEW_REQUEST.)"
-
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"Здравствуйте, {$recipientName}!<br />\n"
-"<br />\n"
-"Я полагаю, что Вы могли бы быть прекрасным рецензентом для материала "
-"«{$submissionTitle}» и прошу Вас взяться выполнить эту важную задачу для "
-"нас. Руководство для рецензентов этого журнала добавлено ниже, материал для "
-"рецензирования приложен к этому письму. Ваша рецензия на материал, вместе с "
-"рекомендацией, должны быть отправлены мне электронной почтой до "
-"{$reviewDueDate}.<br />\n"
-"<br />\n"
-"Пожалуйста, сообщите в ответном письме до {$responseDueDate} сможете ли Вы "
-"взяться за рецензирование.<br />\n"
-"<br />\n"
-"Заранее благодарю Вас,<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"Руководство для рецензентов<br />\n"
-"<br />\n"
-"{$reviewGuidelines}<br />\n"
-
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Запрос на рецензирование рукописи"
 
 msgid "emails.reviewResponseOverdueAutoOneclick.description"
 msgstr ""
