--- a/locale/uk_UA/emails.po
+++ b/locale/uk_UA/emails.po
@@ -24,16 +24,10 @@ msgstr "Маю змогу рецензувати"
 msgid "emails.reviewCancel.subject"
 msgstr "Запит на рецензування скасовано"
 
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Запит на Рецензування Рукопису"
-
 msgid "emails.reviewResponseOverdueAutoOneclick.subject"
 msgstr "Запит на Рецензування Рукопису"
 
 msgid "emails.reviewResponseOverdueAuto.subject"
-msgstr "Запит на Рецензування Рукопису"
-
-msgid "emails.reviewRequestOneclick.subject"
 msgstr "Запит на Рецензування Рукопису"
 
 msgid "emails.reviewRequest.subject"
@@ -58,7 +52,7 @@ msgid "emails.passwordResetConfirm.subject"
 msgstr "Підтвердження Скидання Пароля"
 
 msgid "emails.notification.subject"
-msgstr "Нове Повідомлення від {$siteTitle}"
+msgstr "Нове Повідомлення від {$contextName}"
 
 msgid "emails.reviewResponseOverdueAuto.description"
 msgstr ""
@@ -94,51 +88,13 @@ msgstr ""
 "З Повагою,<br />\n"
 "{$signature}<br />\n"
 
-msgid "emails.reviewRequestOneclick.description"
-msgstr ""
-"Цим листом Редактор Серії просить рецензента здійснити рецензування подання "
-"або відмовитись від цієї роботи. У листі міститься інформація про подання ("
-"назва та анотація), про кінцевий термін рецензування та про те, як отримати "
-"доступ безпосередньо до подання. Цей шаблон використовується, якщо на кроці "
-"\"2\" Налаштування, обраний Стандартний процес рецензування та включена "
-"опція доступу рецензента \"єдиним натисканням\"."
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Я вірю, що Ви могли б стати прекрасним рецензентом для рукопису, "
-"&quot;{$submissionTitle}&quot; надісланого до {$contextName}. Нижче подана "
-"анотація цієї праці, і маю надію, Ви розглянете можливість виконання цієї "
-"важливої роботи для нас.<br />\n"
-"<br />\n"
-"Будь ласка, до {$responseDueDate} зайдіть на сайт видавництва, щоб повідомити, "
-"чи візьметеся Ви за цю рецензію, а також для того, щоб отримати доступ до "
-"подання, записати Вашу рецензію та рекомендацію. <br />\n"
-"<br />\n"
-"Ми хотіли б мати готову рецензію до {$reviewDueDate}.<br />\n"
-"<br />\n"
-"URL подання: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Дякую, що розглянули цей запит.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot;<br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled}<br />\n"
-"{$submissionAbstract}"
-
 msgid "emails.reviewRequest.description"
 msgstr ""
 "Цим листом Редактор Серії просить Рецензента взятися за рецензування подання "
 "або відмовитись від цієї роботи. У листі міститься інформація про подання ("
 "назва та анотація), про кінцевий термін рецензування та про те, як отримати "
 "доступ безпосередньо до подання. Цей шаблон використовується, якщо на кроці "
-"\"2\" Налаштування журналу обраний Стандартний процес рецензування (у іншому "
-"випадку див. REVIEW_REQUEST_ATTACHED.)"
+"\"2\" Налаштування журналу обраний Стандартний процес рецензування."
 
 msgid "emails.reviewRequest.body"
 msgstr ""
@@ -308,7 +264,7 @@ msgstr ""
 #, fuzzy
 msgid "emails.notification.body"
 msgstr ""
-"Ви маєте нове повідомлення від {$siteTitle}:<br />\n"
+"Ви маєте нове повідомлення від {$contextName}:<br />\n"
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
