--- a/locale/en_US/manager.po
+++ b/locale/en_US/manager.po
@@ -1127,7 +1127,7 @@ msgstr "The URL to the press's homepage"
 msgid "emailTemplate.variable.context.contactName"
 msgstr "The name of the press's primary contact"
 
-msgid "emailTemplate.variable.context.principalContactSignature"
+msgid "emailTemplate.variable.context.contextSignature"
 msgstr "The press's email signature for automated emails"
 
 msgid "emailTemplate.variable.context.contactEmail"
