--- a/locale/fi_FI/emails.po
+++ b/locale/fi_FI/emails.po
@@ -15,12 +15,12 @@ msgstr ""
 "X-Generator: Weblate 3.9.1\n"
 
 msgid "emails.notification.subject"
-msgstr "Uusi ilmoitus sivustolta {$siteTitle}"
+msgstr "Uusi ilmoitus sivustolta {$contextName}"
 
 #, fuzzy
 msgid "emails.notification.body"
 msgstr ""
-"Teille on uusi ilmoitus sivustolta {$siteTitle}:<br />\n"
+"Teille on uusi ilmoitus sivustolta {$contextName}:<br />\n"
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
@@ -171,39 +171,6 @@ msgstr ""
 "Ystävällisin terveisin,<br />\n"
 "{$signature}<br />\n"
 
-msgid "emails.reviewRequestOneclick.subject"
-msgstr "Käsikirjoituksen arviointipyyntö"
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"Hyvä {$recipientName},<br />\n"
-"<br />\n"
-"Uskon, että olisitte sopiva arvioija käsikirjoitukselle "
-"&quot;{$submissionTitle}&quot;. Käsikirjoituksen abstrakti löytyy tämän "
-"viestin lopusta. Toivon, että harkitsette tähän meille tärkeään tehtävään "
-"ryhtymistä.<br />\n"
-"<br />\n"
-"Kirjautukaa julkaisijan verkkosivustolle {$responseDueDate} mennessä "
-"ilmoittaaksenne haluatteko suorittaa arvioinnin vai ette. Teidän on "
-"kirjauduttava verkkosivustolle myös, jotta saatte pääsyn käsikirjoitukseen "
-"ja voitte tallentaa arviointinne ja suosituksenne.<br />\n"
-"<br />\n"
-"Arvioinnin määräpäivä on {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Käsikirjoituksen URL: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Kiitos, että harkitsette arvioijaksi ryhtymistä.<br />\n"
-"<br />\n"
-"Ystävällisin terveisin,<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot;<br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled}<br />\n"
-"{$submissionAbstract}"
-
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Käsikirjoituksen arviointipyyntö"
 
@@ -272,32 +239,6 @@ msgstr ""
 "{$abstractTermIfEnabled}<br />\n"
 "{$submissionAbstract}"
 
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Käsikirjoituksen arviointipyyntö"
-
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"Hyvä {$recipientName},<br />\n"
-"<br />\n"
-"Uskon, että sopisitte erinomaisesti käsikirjoituksen "
-"&quot;{$submissionTitle}&quot; arvioijaksi, ja pyydänkin, että harkitsette "
-"ryhtyvänne tähän meille tärkeään tehtävään. Arviointiohjeet löytyvät tämän "
-"sähköpostin lopusta ja käsikirjoitus on liitteenä. Arviointinne sekä "
-"suosituksenne tulisi lähettää minulle sähköpostitse {$reviewDueDate} "
-"mennessä.<br />\n"
-"<br />\n"
-"Ilmoitattehan oletteko halukas suorittamaan arvioinnin vastaamalla tähän "
-"viestiin {$responseDueDate} mennessä.<br />\n"
-"<br />\n"
-"Kiitos, että harkitsette arvioijaksi ryhtymistä.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"Arviointiohjeet<br />\n"
-"<br />\n"
-"{$reviewGuidelines}<br />\n"
-
 msgid "emails.reviewCancel.subject"
 msgstr "Arviointipyynnön peruminen"
 
@@ -358,25 +299,6 @@ msgstr ""
 "Vahvistattehan vielä, voitteko suorittaa tämän arvioinnin.<br />\n"
 "<br />\n"
 "Yhteydenottoanne odottaen,<br />\n"
-"{$signature}"
-
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Muistutus käsikirjoituksen arvioinnista"
-
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"Hyvä {$recipientName},<br />\n"
-"<br />\n"
-"Muistuttaisin ystävällisesti pyynnöstämme arvioida käsikirjoitus "
-"&quot;{$submissionTitle}&quot;. Toivoimme saavamme arviointinne "
-"{$reviewDueDate} mennessä, ja olisimme iloisia, mikäli voisitte lähettää sen "
-"meille mahdollisimman pian.<br />\n"
-"<br />\n"
-"Käsikirjoituksen URL: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Vahvistattehan vielä, voitteko suorittaa tämän arvioinnin.<br />\n"
-"<br />\n"
-"Yhteydenottoanne odottaen,<br  />\n"
 "{$signature}"
 
 msgid "emails.reviewRemindAuto.subject"
@@ -669,11 +591,6 @@ msgstr ""
 "access is disabled. Scheduled tasks must be enabled and configured (see the "
 "site configuration file)."
 
-msgid "emails.reviewRemindOneclick.description"
-msgstr ""
-"This email is sent by a Series Editor to remind a reviewer that their review "
-"is due."
-
 msgid "emails.reviewRemind.description"
 msgstr ""
 "This email is sent by a Series Editor to remind a reviewer that their review "
@@ -714,14 +631,6 @@ msgstr ""
 "This email is sent by the Series Editor to a Reviewer who has a submission "
 "review in progress to notify them that the review has been cancelled."
 
-msgid "emails.reviewRequestAttached.description"
-msgstr ""
-"This email is sent by the Series Editor to a Reviewer to request that they "
-"accept or decline the task of reviewing a submission. It includes the "
-"submission as an attachment. This message is used when the Email-Attachment "
-"Review Process is selected in Management > Settings > Workflow > Review. ("
-"Otherwise see REVIEW_REQUEST.)"
-
 msgid "emails.reviewResponseOverdueAutoOneclick.description"
 msgstr ""
 "This email is automatically sent when a reviewer's confirmation due date "
@@ -736,15 +645,6 @@ msgstr ""
 "click reviewer access is disabled. Scheduled tasks must be enabled and "
 "configured (see the site configuration file)."
 
-msgid "emails.reviewRequestOneclick.description"
-msgstr ""
-"This email from the Series Editor to a Reviewer requests that the reviewer "
-"accept or decline the task of reviewing a submission. It provides "
-"information about the submission such as the title and abstract, a review "
-"due date, and how to access the submission itself. This message is used when "
-"the Standard Review Process is selected in Management > Settings > Workflow >"
-" Review, and one-click reviewer access is enabled."
-
 msgid "emails.reviewRequest.description"
 msgstr ""
 "This email from the Series Editor to a Reviewer requests that the reviewer "
@@ -752,7 +652,7 @@ msgstr ""
 "information about the submission such as the title and abstract, a review "
 "due date, and how to access the submission itself. This message is used when "
 "the Standard Review Process is selected in Management > Settings > Workflow >"
-" Review. (Otherwise see REVIEW_REQUEST_ATTACHED.)"
+" Review."
 
 msgid "emails.editorAssign.description"
 msgstr ""
