--- a/locale/tr_TR/emails.po
+++ b/locale/tr_TR/emails.po
@@ -44,11 +44,11 @@ msgstr ""
 "bizimle iletişime geçin. Bu yayınevine katkılarınız için teşekkür ederiz."
 
 msgid "emails.notification.subject"
-msgstr "{$siteTitle}’den yeni bildirim"
+msgstr "{$contextName}’den yeni bildirim"
 
 msgid "emails.notification.body"
 msgstr ""
-"{$siteTitle}'dan yeni bir bildiriminiz var:<br />\n"
+"{$contextName}'dan yeni bir bildiriminiz var:<br />\n"
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
@@ -247,49 +247,7 @@ msgstr ""
 "gönderiyi değerlendirme görevini kabul etmesini veya reddetmesini ister. "
 "Gönderi hakkında başlık ve özet, değerlendirme için son tarih ve gönderiye "
 "nasıl erişileceği gibi bilgiler sağlar. Bu mesaj, Yönetim> Ayarlar> İş Akışı>"
-" Değerlendirme’de Standart Değerlendirme Süreci seçildiğinde kullanılır. ("
-"Diğer türlü REVIEW_REQUEST_ATTACHED’e bakınız.)"
-
-msgid "emails.reviewRequestOneclick.subject"
-msgstr "Yazı Taslağı Değerlendirme Talebi"
-
-msgid "emails.reviewRequestOneclick.body"
-msgstr ""
-"Sayın {$recipientName}:<br />\n"
-"<br />\n"
-"{$contextName} için &quot;{$submissionTitle}&quot; başlıklı yazı taslağının "
-"mükemmel bir eleştirmeni olarak hizmet edeceğinize inanıyoruz. Gönderinin "
-"özeti aşağıda yer almakta olup bu önemli görevi bizim için üstlenmeyi "
-"düşünmenizi rica ediyoruz. \n"
-"<br />\n"
-"Değerlendirmeyi yapıp yapmayacağınızı belirtmek, gönderiye erişmek ve "
-"değerlendirme ve önerinizi kaydetmek için lütfen {$responseDueDate} tarihine "
-"kadar yayınevi web sitesine giriş yapın.<br />\n"
-"<br />\n"
-"<br />\n"
-"Değerlendirme için son tarih: {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Gönderi URL: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Bu isteği değerlendirdiğiniz için teşekkür ederiz.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot;<br />\n"
-"<br />\n"
-"{$abstractTermIfEnabled}<br />\n"
-"{$submissionAbstract}"
-
-msgid "emails.reviewRequestOneclick.description"
-msgstr ""
-"Dizi Editörü'nden bir Danışmana gönderilen bu e-posta, danışmanın bir "
-"gönderiyi değerlendirme görevini kabul etmesini veya reddetmesini ister. "
-"Gönderi hakkında başlık ve özet, değerlendirme için son tarih ve gönderiye "
-"nasıl erişileceği gibi bilgiler sağlar. Bu mesaj, Yönetim> Ayarlar> İş Akışı>"
-" Değerlendirme’de Standart Değerlendirme Süreci seçildiğinde ve tek "
-"tıklamayla danışman erişimi etkinleştirildiğinde kullanılır."
+" Değerlendirme’de Standart Değerlendirme Süreci seçildiğinde kullanılır."
 
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Yazı Taslağı Değerlendirme Talebi"
@@ -369,40 +327,6 @@ msgstr ""
 "tıklamayla danışman erişimi etkinleştirildiğinde otomatik olarak gönderilir. "
 "Zamanlanmış görevler etkinleştirilmeli ve yapılandırılmalıdır (site "
 "yapılandırma dosyasına bakın)."
-
-msgid "emails.reviewRequestAttached.subject"
-msgstr "Yazı Taslağı Değerlendirme Talebi"
-
-msgid "emails.reviewRequestAttached.body"
-msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"&quot;{$submissionTitle}&quot; başlıklı taslağın mükemmel bir eleştirmeni "
-"olarak hizmet edeceğinize inanıyoruz ve bu önemli görevi bizim için "
-"üstlenmeyi düşünmenizi rica ediyoruz. Bu yayınevi için Değerlendirme Rehberi "
-"aşağıda yer almakta olup gönderi bu e-postaya eklenmiştir. Önerinizle "
-"birlikte gönderinizle ilgili değerlendirmeniz {$reviewDueDate} tarihine "
-"kadar bize e-posta ile gönderilmelidir.<br />\n"
-"<br />\n"
-"Lütfen incelemeyi yapıp yapamayacağınızı ve yapmak isteyip istemediğinizi "
-"{$responseDueDate} tarihine kadar e-postanızda belirtin.<br />\n"
-"<br />\n"
-"Bu isteği değerlendirdiğiniz için teşekkür ederiz.<br />\n"
-"<br />\n"
-"{$signature}<br />\n"
-"<br />\n"
-"<br />\n"
-"Değerlendirme Rehberi<br />\n"
-"<br />\n"
-"{$reviewGuidelines}<br />\n"
-
-msgid "emails.reviewRequestAttached.description"
-msgstr ""
-"Bu e-posta Dizi Editörü tarafından bir gönderiyi değerlendirme görevini red "
-"mi yoksa kabul mu ettiğini sormak için bir Danışmana gönderilir. Ek dosya "
-"olarak gönderiyi içerir. Bu mesaj, Yönetim> Ayarlar> İş Akışı> Değerlendirme "
-"bölümünde E-posta Ekini Değerlendirme Süreci seçildiğinde kullanılır. (Diğer "
-"türlü REVIEW_REQUEST'e bakınız.)"
 
 msgid "emails.reviewCancel.subject"
 msgstr "Değerlendirme Talebi İptal Edildi"
@@ -511,31 +435,6 @@ msgstr ""
 "{$signature}"
 
 msgid "emails.reviewRemind.description"
-msgstr ""
-"Bu e-posta, bir dizi Editörü tarafından danışmana değerlendirme için son "
-"tarihin geçtiğini hatırlatmak için gönderilir."
-
-msgid "emails.reviewRemindOneclick.subject"
-msgstr "Gönderi Değerlendirme Hatırlatıcısı"
-
-msgid "emails.reviewRemindOneclick.body"
-msgstr ""
-"Sayın {$recipientName}:<br />\n"
-"<br />\n"
-"{$contextName} için &quot;{$submissionTitle}&quot; başlıklı gönderiyi gözden "
-"geçirmenizi rica ediyoruz. Bu değerlendirmenin {$reviewDueDate} tarihine "
-"kadar elimizde olmasını umuyoruz ve hazırlanır hazırlanmaz değerlendirmenin "
-"elimizde olmasından memnuniyet duyacağız.<br />\n"
-"<br />\n"
-"Gönderi URL: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Lütfen yayınevinin çalışmalarına hayati katkısı olacak bu işlemi "
-"tamamlayabileceğinizi teyit ediniz. Cevabınızı sabırsızlıkla bekliyoruz.<br "
-"/>\n"
-"<br />\n"
-"{$signature}"
-
-msgid "emails.reviewRemindOneclick.description"
 msgstr ""
 "Bu e-posta, bir dizi Editörü tarafından danışmana değerlendirme için son "
 "tarihin geçtiğini hatırlatmak için gönderilir."
