--- a/docs/README
+++ b/docs/README
@@ -28,7 +28,7 @@ System Requirements
 -------------------
 Recommended server requirements:
 
-	* PHP >= 7.3
+	* PHP 7.3.x, 7.4.x, or 8.0.x
 	* MySQL >= 4.1.1 or PostgreSQL >= 9.5
 	* Apache >= 1.3.2x or >= 2.0.4x or Microsoft IIS 6
 	* Operating system: Any OS that supports the above software, including
